Ajout des fichiers

--- a/02. Fondamentaux du langage C#/2.1. Structure d'un programme C#.md
+++ b/02. Fondamentaux du langage C#/2.1. Structure d'un programme C#.md
@@ -1,195 +1,221 @@
- 
-### 2.1.1. Espaces de noms (namespaces)
-Les espaces de noms (namespaces) sont des conteneurs logiques qui organisent les classes et autres types. Ils permettent d'éviter les conflits de noms et de structurer les applications de manière hiérarchique.
-#### Définition et utilisation
-Un espace de noms se déclare avec le mot-clé : `namespace`
-``` csharp
+# 2.1 Structure d'un programme C#
+
+La structure d'un programme C# est le fondement sur lequel repose toute application. Comprendre cette structure est essentiel pour tout développeur, qu'il soit débutant ou expérimenté. Dans cette section, nous allons explorer les composants fondamentaux qui constituent un programme C#.
+
+## 2.1.1 Espaces de noms (namespaces)
+
+Les espaces de noms (ou "namespaces" en anglais) sont des conteneurs qui organisent les classes et autres types en groupes logiques. Ils jouent un rôle crucial dans la structuration et la gestion du code.
+
+### Pourquoi utiliser des espaces de noms ?
+
+- **Éviter les conflits de noms** : Imaginez que vous utilisez deux bibliothèques différentes, chacune contenant une classe nommée `Logger`. Sans espaces de noms, comment l'ordinateur saurait-il quelle classe `Logger` vous voulez utiliser ?
+- **Organiser le code** : Les espaces de noms permettent de regrouper des fonctionnalités similaires.
+- **Faciliter la réutilisation** : Ils rendent votre code plus facile à partager et à intégrer dans d'autres projets.
+
+### Déclaration d'un espace de noms
+
+```csharp
 namespace MonApplication
 {
-    // Classes, structures, interfaces, etc.
+    // Classes, interfaces, structures, etc.
 }
 ```
-##### Importation d'espaces de noms
-Pour utiliser des types définis dans d'autres espaces de noms, on utilise la directive `using` :
-``` csharp
-using System;           // Espace de noms fondamental
-using System.IO;        // Pour les opérations d'entrée/sortie
-using System.Collections.Generic;  // Pour les collections génériques
-```
-##### Espaces de noms imbriqués
-Les espaces de noms peuvent être hiérarchiques, avec une notation par points :
-``` csharp
-namespace MonEntreprise.MonProduit.ModuleSpecifique
-{
-    // Classes spécifiques à ce module
-}
-```
-##### Différences entre .NET Framework 4.7.2 et .NET 8
-**.NET Framework 4.7.2**
-- Organisation traditionnelle des espaces de noms
-- Importation explicite requise pour tous les espaces de noms
 
-**.NET 8 (avec C# 10+)**
-- Introduction des "global using directives" pour importer des espaces de noms à l'échelle du projet
-- "Implicit usings" qui importent automatiquement les espaces de noms communs
+### Utilisation d'un espace de noms
 
-Exemple d'usings implicites dans un fichier `.csproj` (.NET 8) :
-``` xml
-<PropertyGroup>
-    <ImplicitUsings>enable</ImplicitUsings>
-</PropertyGroup>
+Pour utiliser des types définis dans un espace de noms, vous avez deux options :
+
+1. **Directive `using`** (recommandée) :
+```csharp
+using System;
+using System.Collections.Generic;
+
+// Maintenant vous pouvez utiliser Console et List directement
+Console.WriteLine("Bonjour");
+List<string> maListe = new List<string>();
 ```
-Cela importe automatiquement des espaces de noms comme , `System.Collections.Generic`, etc., selon le type de projet. `System`
-##### Bonnes pratiques
-- **Structure hiérarchique** : Utilisez une structure hiérarchique reflétant l'organisation de votre application
-- **Nommage** : Utilisez PascalCase et des noms significatifs (généralement nom d'entreprise.nom de produit.module)
-- **Évitez les conflits** : Ne créez pas d'espaces de noms qui dupliquent ceux du framework
-- **Cohérence** : Gardez une cohérence dans l'organisation de vos espaces de noms
 
-### 2.1.2. Classes et fichiers
-En C#, le code est principalement organisé en classes, qui sont généralement définies dans des fichiers individuels portant l'extension `.cs`.
-#### Relation entre fichiers et classes
-Contrairement à Java, C# n'impose pas que le nom du fichier corresponde au nom de la classe, mais c'est une convention fortement recommandée :
-``` csharp
-// Fichier: Utilisateur.cs
-namespace MonApplication.Modeles
-{
-    public class Utilisateur
-    {
-        // Propriétés et méthodes de la classe
-    }
-}
+2. **Nom complet** :
+```csharp
+// Sans directive using, vous devez spécifier le chemin complet
+System.Console.WriteLine("Bonjour");
+System.Collections.Generic.List<string> maListe = new System.Collections.Generic.List<string>();
 ```
-#### Plusieurs classes dans un fichier
-Bien que ce ne soit pas recommandé pour les classes importantes, C# permet de définir plusieurs classes dans un même fichier :
-``` csharp
-// Fichier: EntitesUtilisateur.cs
-namespace MonApplication.Modeles
-{
-    public class Utilisateur
-    {
-        // Implémentation de la classe Utilisateur
-    }
 
-    public class Adresse
-    {
-        // Implémentation de la classe Adresse
-    }
-}
-```
-#### Classes partielles
-C# permet de répartir la définition d'une classe sur plusieurs fichiers à l'aide du mot-clé `partial` :
-``` csharp
-// Fichier: Utilisateur.Donnees.cs
-namespace MonApplication.Modeles
-{
-    public partial class Utilisateur
-    {
-        // Propriétés et champs
-        public string Nom { get; set; }
-        public string Email { get; set; }
-    }
-}
+### Espaces de noms courants
 
-// Fichier: Utilisateur.Methodes.cs
-namespace MonApplication.Modeles
+- `System` : Types fondamentaux, exceptions, etc.
+- `System.Collections.Generic` : Collections typées (List, Dictionary, etc.)
+- `System.Linq` : Requêtes et manipulations de données
+- `System.IO` : Entrées/sorties de fichiers
+- `System.Net` : Fonctionnalités réseau
+- `System.Windows.Forms` : Interface utilisateur Windows (WinForms)
+- `System.Xml` : Traitement XML
+
+### Espaces de noms imbriqués
+
+Les espaces de noms peuvent être imbriqués pour créer une hiérarchie :
+
+```csharp
+namespace MonEntreprise
 {
-    public partial class Utilisateur
+    namespace MonProduit
     {
-        // Méthodes
-        public bool Valider()
+        public class MaClasse
         {
-            // Logique de validation
-            return !string.IsNullOrEmpty(Nom) && !string.IsNullOrEmpty(Email);
+            // ...
         }
     }
 }
 ```
-Les classes partielles sont particulièrement utiles pour :
-- Séparer le code généré automatiquement du code écrit manuellement
-- Organiser les classes volumineuses par fonctionnalité
-- Permettre à plusieurs développeurs de travailler sur différentes parties d'une même classe
 
-#### Organisation des fichiers dans un projet
-**.NET Framework 4.7.2** utilise traditionnellement une organisation basée sur des dossiers qui correspondent aux espaces de noms :
-```
-MonProjet/
-│
-├── Properties/
-│   └── AssemblyInfo.cs
-│
-├── Models/
-│   ├── Utilisateur.cs
-│   └── Produit.cs
-│
-├── Services/
-│   └── UtilisateurService.cs
-│
-└── Program.cs
-```
-**.NET 8** encourage une organisation similaire mais utilise un fichier de projet plus simple et ne nécessite plus de fichier AssemblyInfo.cs :
-```
-MonProjet/
-│
-├── Models/
-│   ├── Utilisateur.cs
-│   └── Produit.cs
-│
-├── Services/
-│   └── UtilisateurService.cs
-│
-├── Program.cs
-└── MonProjet.csproj
-```
-### 2.1.3. Point d'entrée (méthode Main)
-Le point d'entrée d'une application C# est la méthode . C'est par cette méthode que l'exécution du programme commence. `Main`
-#### Signature de la méthode Main
-La méthode peut avoir plusieurs signatures valides : `Main`
-``` csharp
-// Version sans retour et sans arguments
-static void Main()
-{
-    // Code du programme
-}
+Cela peut aussi s'écrire :
 
-// Version sans retour avec arguments de ligne de commande
-static void Main(string[] args)
+```csharp
+namespace MonEntreprise.MonProduit
 {
-    // Code du programme utilisant args
-}
-
-// Version avec retour d'un code d'état
-static int Main()
-{
-    // Code du programme
-    return 0; // Code de retour (0 = succès par convention)
-}
-
-// Version avec retour et arguments
-static int Main(string[] args)
-{
-    // Code du programme utilisant args
-    return 0;
+    public class MaClasse
+    {
+        // ...
+    }
 }
 ```
-#### Exemple complet en .NET Framework 4.7.2
-``` csharp
-using System;
+
+Pour accéder à `MaClasse`, on écrirait :
+
+```csharp
+using MonEntreprise.MonProduit;
+
+// Puis
+MaClasse instance = new MaClasse();
+
+// Ou directement sans using
+MonEntreprise.MonProduit.MaClasse instance = new MonEntreprise.MonProduit.MaClasse();
+```
+
+## 2.1.2 Classes et fichiers
+
+En C#, les classes sont les composants fondamentaux qui encapsulent les données (attributs) et les comportements (méthodes).
+
+### Relation entre classes et fichiers
+
+- En général, on place **une classe par fichier** (bonne pratique)
+- Le nom du fichier correspond habituellement au nom de la classe (par exemple, `MaClasse.cs`)
+- Un fichier peut contenir plusieurs classes, mais c'est généralement déconseillé pour la lisibilité
+
+### Structure d'une classe
+
+```csharp
+using System;  // Les directives using sont en haut du fichier
 
 namespace MonApplication
+{
+    public class MaClasse
+    {
+        // Attributs (champs) - stockent les données
+        private int _monAttribut;
+        public string NomPublic;
+
+        // Propriétés - accès contrôlé aux données
+        public int MaPropriete { get; set; }
+
+        // Constructeur - initialise les objets
+        public MaClasse()
+        {
+            _monAttribut = 0;
+            NomPublic = "Valeur par défaut";
+        }
+
+        // Méthodes - comportements
+        public void MaMethode()
+        {
+            Console.WriteLine("Exécution de ma méthode");
+        }
+
+        // Méthode avec paramètres et valeur de retour
+        public int Calculer(int a, int b)
+        {
+            return a + b + _monAttribut;
+        }
+    }
+
+    // Une autre classe dans le même fichier (éviter si possible)
+    internal class ClasseSecondaire
+    {
+        // ...
+    }
+}
+```
+
+### Types de classes
+
+- **Classes publiques** (`public class`) : Accessibles depuis n'importe où
+- **Classes internes** (`internal class`) : Accessibles uniquement dans le même assembly
+- **Classes statiques** (`static class`) : Contiennent uniquement des membres statiques, ne peuvent pas être instanciées
+- **Classes abstraites** (`abstract class`) : Servent de base à d'autres classes, ne peuvent pas être instanciées directement
+- **Classes partielles** (`partial class`) : Permettent de définir une classe dans plusieurs fichiers
+
+### Organisation typique d'un fichier C#
+
+1. Directives `using`
+2. Déclaration de l'espace de noms
+3. Classes et autres types
+
+## 2.1.3 Point d'entrée (méthode Main)
+
+Tout programme C# exécutable doit avoir un **point d'entrée**, c'est-à-dire l'endroit où l'exécution commence. Ce point d'entrée est traditionnellement une méthode appelée `Main`.
+
+### Caractéristiques de la méthode Main
+
+- Elle doit être `static`
+- Elle est généralement `public` ou `private` (les deux fonctionnent)
+- Elle peut retourner `void` ou `int` (code de retour pour le système d'exploitation)
+- Elle peut prendre un paramètre `string[] args` pour les arguments de ligne de commande
+
+### Variations de la méthode Main
+
+```csharp
+// Version la plus courante
+static void Main(string[] args)
+{
+    Console.WriteLine("Démarrage du programme");
+    // Code du programme...
+}
+
+// Avec code de retour
+static int Main(string[] args)
+{
+    // Code du programme...
+    return 0; // 0 signifie généralement "succès"
+}
+
+// Sans paramètres de ligne de commande
+static void Main()
+{
+    // Code du programme...
+}
+```
+
+### Exemple complet d'un programme simple
+
+```csharp
+using System;
+
+namespace MonPremierProgramme
 {
     class Program
     {
         static void Main(string[] args)
         {
-            Console.WriteLine("Bienvenue dans mon application !");
+            Console.WriteLine("Bonjour le monde !");
 
+            // Utilisation des arguments de ligne de commande
             if (args.Length > 0)
             {
-                Console.WriteLine("Arguments passés :");
+                Console.WriteLine("Arguments reçus :");
                 foreach (string arg in args)
                 {
-                    Console.WriteLine($"- {arg}");
+                    Console.WriteLine($"  - {arg}");
                 }
             }
 
@@ -199,149 +225,119 @@ namespace MonApplication
     }
 }
 ```
-#### Accès aux arguments de ligne de commande
-Les arguments passés au programme depuis la ligne de commande sont accessibles via le tableau `args` :
-``` csharp
-static void Main(string[] args)
-{
-    // Pour un programme exécuté avec : MonApp.exe fichier.txt -v
-    // args[0] contiendra "fichier.txt"
-    // args[1] contiendra "-v"
 
-    foreach (string arg in args)
-    {
-        Console.WriteLine(arg);
-    }
-}
+Pour exécuter ce programme avec des arguments, on pourrait utiliser :
 ```
-#### Gestion des erreurs dans Main
-Le code de retour de la méthode peut être utilisé pour indiquer si le programme s'est terminé avec succès : `Main`
-``` csharp
-static int Main(string[] args)
-{
-    try
-    {
-        // Logique du programme
-        Console.WriteLine("Exécution du programme...");
-        return 0; // Succès
-    }
-    catch (Exception ex)
-    {
-        Console.Error.WriteLine($"Erreur: {ex.Message}");
-        return 1; // Échec
-    }
-}
+MonPremierProgramme.exe arg1 "argument 2" arg3
 ```
-### 2.1.4. Programmes top-level (C# 9+)
-À partir de C# 9 (disponible dans .NET 5 et versions ultérieures, incluant .NET 8), Microsoft a introduit les "top-level statements" qui simplifient considérablement l'écriture de petits programmes en éliminant la nécessité de définir explicitement un espace de noms et une classe.
-#### Syntaxe simplifiée
-Voici un exemple complet en .NET 8 utilisant les top-level statements :
-``` csharp
-// Program.cs en .NET 8 avec top-level statements
-Console.WriteLine("Bienvenue dans mon application !");
 
-// Les args sont disponibles sans déclaration
-if (args.Length > 0)
-{
-    Console.WriteLine("Arguments passés :");
-    foreach (string arg in args)
-    {
-        Console.WriteLine($"- {arg}");
-    }
-}
+### Plusieurs méthodes Main dans un même projet
 
-// Pas besoin de Console.ReadKey() dans beaucoup de cas modernes
-```
-#### Règles et restrictions
-- Un seul fichier par projet peut contenir des top-level statements
-- Ce fichier est généralement nommé `Program.cs`
-- Les top-level statements doivent apparaître avant toute déclaration de types (classes, enums, etc.)
-- Le compilateur génère automatiquement une classe `Program` et une méthode en coulisses `Main`
+Si vous avez plusieurs classes avec une méthode `Main` dans un projet, vous devez spécifier quelle classe contient le point d'entrée à utiliser :
 
-#### Utilisation de using avec les top-level statements
-Les directives `using` restent en haut du fichier :
-``` csharp
-using System.IO;
-using System.Text.Json;
+1. Dans Visual Studio : Projet > Propriétés > Onglet Application > "Classe de démarrage"
+2. En ligne de commande : `csc /main:MonNamespace.MaClasse Fichier1.cs Fichier2.cs`
 
-// Code de top-level
-string jsonString = File.ReadAllText("données.json");
-var données = JsonSerializer.Deserialize<MesDonnées>(jsonString);
-Console.WriteLine($"Données chargées : {données.Titre}");
+## 2.1.4 Programmes top-level (C# 9+)
 
-// Classes peuvent être définies après les top-level statements
-public class MesDonnées
-{
-    public string Titre { get; set; }
-}
-```
-#### Retour de valeur
-Pour retourner une valeur dans un programme top-level (équivalent à `int Main()`), utilisez l'instruction `return` directement :
-``` csharp
-try
-{
-    // Logique du programme
-    return 0; // Succès
-}
-catch (Exception ex)
-{
-    Console.Error.WriteLine($"Erreur: {ex.Message}");
-    return 1; // Échec
-}
-```
-#### Comparaison avec la syntaxe traditionnelle
-**Syntaxe traditionnelle (.NET Framework 4.7.2)**
-``` csharp
+À partir de C# 9.0 (disponible avec .NET 5 en novembre 2020), une nouvelle syntaxe simplifiée a été introduite : les **programmes top-level**. Cette approche permet d'écrire des programmes plus concis en évitant d'avoir à créer explicitement une classe et une méthode `Main`.
+
+### Syntaxe des programmes top-level
+
+Au lieu d'écrire :
+
+```csharp
 using System;
 
-namespace MonApplication
+namespace MonProgramme
 {
     class Program
     {
         static void Main(string[] args)
         {
-            Console.WriteLine("Hello, World!");
+            Console.WriteLine("Bonjour le monde !");
         }
     }
 }
 ```
-**Syntaxe top-level (.NET 8)**
-``` csharp
-// Tout le code au-dessus est généré automatiquement
-Console.WriteLine("Hello, World!");
-// Pas besoin d'accolades ni de déclarations de classe/méthode
-```
-#### Cas d'utilisation recommandés
-Les top-level statements sont idéals pour :
-- Applications console simples
-- Scripts et utilitaires
-- Petits programmes
-- Prototypes et tests
 
-Pour les applications plus complexes, la structure traditionnelle avec des espaces de noms et des classes explicites reste souvent préférable pour la clarté et l'organisation.
-#### Utilisation de fonctions locales
-Les top-level statements peuvent être organisés avec des fonctions locales :
-``` csharp
-// Logique principale du programme
-Console.WriteLine("Démarrage du programme...");
-TraiterFichiers(args);
-Console.WriteLine("Fin du traitement.");
+Vous pouvez simplement écrire :
+
+```csharp
+using System;
+
+Console.WriteLine("Bonjour le monde !");
+```
+
+Le compilateur génère automatiquement une classe et une méthode `Main` pour vous.
+
+### Fonctionnalités des programmes top-level
+
+- Vous pouvez toujours accéder aux arguments de ligne de commande via la variable `args`
+- Vous pouvez définir des fonctions locales
+- Vous pouvez retourner un code de sortie avec `return`
+- Vous pouvez toujours définir des espaces de noms et des classes dans le même fichier
+
+### Exemple complet d'un programme top-level
+
+```csharp
+using System;
+
+// Code directement au niveau supérieur
+Console.WriteLine("Bonjour depuis un programme top-level !");
+
+// Accès aux arguments de ligne de commande
+foreach (var arg in args)
+{
+    Console.WriteLine($"Argument: {arg}");
+}
 
 // Fonction locale
-void TraiterFichiers(string[] fichiers)
+void AfficherMessage(string message)
 {
-    foreach (var fichier in fichiers)
+    Console.WriteLine($"Message: {message}");
+}
+
+// Appel de la fonction locale
+AfficherMessage("C'est si simple maintenant !");
+
+// Vous pouvez toujours définir des classes
+class Utilisateur
+{
+    public string Nom { get; set; }
+    public void Saluer()
     {
-        Console.WriteLine($"Traitement du fichier {fichier}");
-        // Logique de traitement
+        Console.WriteLine($"Bonjour, je m'appelle {Nom}");
     }
 }
-```
-### Résumé des bonnes pratiques
-- **Espaces de noms** : Utilisez une structure hiérarchique reflétant l'organisation de votre code
-- **Organisation des fichiers** : Un fichier par classe importante, nommé d'après la classe
-- **Classes partielles** : Utilisez-les pour séparer le code généré ou pour organiser les classes volumineuses
-- **Point d'entrée** : Gardez la méthode simple, déléguant la logique à d'autres classes `Main`
-- **Top-level statements** : Privilégiez-les pour les petits programmes et scripts dans .NET 8
 
-Dans la prochaine section, nous explorerons les variables, les types de données et les opérateurs qui constituent les blocs de construction fondamentaux de tout programme C#.
+// Et les utiliser
+var utilisateur = new Utilisateur { Nom = "Marie" };
+utilisateur.Saluer();
+
+// Retourner un code de sortie (optionnel)
+return 0;
+```
+
+### Limitations des programmes top-level
+
+- Un seul fichier dans le projet peut contenir du code top-level (sinon, il y aurait ambiguïté sur le point d'entrée)
+- Les programmes top-level sont particulièrement adaptés aux petits programmes et aux scripts, mais pour les applications complexes, la structure traditionnelle peut être plus appropriée pour la clarté et l'organisation
+
+### Choix entre style traditionnel et top-level
+
+| Style traditionnel | Style top-level |
+|--|--|
+| Plus explicite | Plus concis |
+| Meilleur pour les grandes applications | Idéal pour les petits programmes |
+| Familier pour les développeurs venant d'autres langages | Simplifie l'apprentissage pour les débutants |
+| Nécessaire pour les versions de C# antérieures à 9.0 | Nécessite C# 9.0 ou ultérieur |
+
+## Résumé
+
+- Les **espaces de noms** organisent votre code en groupes logiques et évitent les conflits de noms.
+- Les **classes** sont les blocs de construction fondamentaux qui encapsulent données et comportements.
+- Le **point d'entrée** traditionnel est une méthode `Main` statique dans une classe.
+- Les **programmes top-level** (C# 9+) permettent d'écrire du code plus concis sans créer explicitement une classe et une méthode `Main`.
+
+En comprenant ces concepts fondamentaux, vous avez maintenant une base solide pour développer des applications en C#, quelle que soit leur complexité.
