--- a/03. Tableaux et collections/3.1. Tableaux.md
+++ b/03. Tableaux et collections/3.1. Tableaux.md
@@ -1,167 +1,146 @@
-# 3.1. Tableaux
+# 3.1. Tableaux en C#
 
-![Tableaux en C#](https://via.placeholder.com/600x150?text=Tableaux+en+C%23)
-
-Les tableaux constituent l'une des structures de données fondamentales en C#. Ils permettent de stocker des collections d'éléments de même type dans un espace mémoire contigu, offrant un accès rapide à n'importe quel élément via son index.
+Les tableaux sont des structures de données fondamentales qui permettent de stocker plusieurs valeurs du même type dans une seule variable. Ils servent de base à de nombreuses structures de données plus complexes et sont essentiels pour manipuler efficacement des collections d'éléments dans vos applications.
 
 ## 3.1.1. Tableaux unidimensionnels
 
-Les tableaux unidimensionnels sont les tableaux les plus simples, représentant une séquence linéaire d'éléments.
+Un tableau unidimensionnel est la forme la plus simple de tableau, représentant une liste linéaire d'éléments.
 
 ### Déclaration et initialisation
 
+Il existe plusieurs façons de déclarer et initialiser un tableau unidimensionnel en C# :
+
+```csharp
+// Déclaration d'un tableau de 5 entiers sans initialisation
+int[] nombres = new int[5];
+
+// Déclaration et initialisation simultanées
+string[] jours = new string[] { "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche" };
+
+// Syntaxe simplifiée (le compilateur infère la taille du tableau)
+double[] prix = { 9.99, 14.50, 19.99, 24.75 };
+
+// Déclaration d'abord, puis initialisation plus tard
+char[] voyelles;
+voyelles = new char[] { 'a', 'e', 'i', 'o', 'u' };
 ```
-// Déclaration sans initialisation
-int[] nombres;
-
-// Déclaration avec allocation (crée un tableau de 5 entiers, tous initialisés à 0)
-int[] scores = new int[5];
-
-// Déclaration et initialisation avec des valeurs spécifiques
-int[] valeurs = new int[] { 10, 20, 30, 40, 50 };
-
-// Syntaxe abrégée (inférence de type par le compilateur)
-int[] prix = { 15, 25, 35, 45 };
-
-// Tableau vide
-int[] vide = new int[0];
-// ou plus efficacement en mémoire
-int[] vide2 = Array.Empty<int>();
-```
-
 
 ### Accès aux éléments
 
-```
-int[] scores = { 85, 92, 78, 95, 88 };
+Les éléments d'un tableau sont accessibles via leur indice (qui commence à 0) :
 
-// Accès par index (les indices commencent à 0)
-int premierScore = scores[0];      // 85
-int troisièmeScore = scores[2];    // 78
+```csharp
+string[] pays = { "France", "Espagne", "Italie", "Allemagne" };
+
+// Accès au premier élément (indice 0)
+Console.WriteLine(pays[0]);  // Affiche "France"
+
+// Accès au troisième élément (indice 2)
+Console.WriteLine(pays[2]);  // Affiche "Italie"
 
 // Modification d'un élément
-scores[1] = 94;                    // Le tableau devient { 85, 94, 78, 95, 88 }
-
-// Propriété Length (nombre d'éléments)
-int taille = scores.Length;        // 5
-
-// Accès au dernier élément
-int dernierScore = scores[scores.Length - 1];  // 88
-
-// UNIQUEMENT dans .NET Core 3.0+ et .NET 8 (pas disponible en .NET Framework 4.7.2)
-// Accès avec les nouveaux opérateurs Index et Range
-// int dernierIndex = scores[^1];     // 88 (dernier élément)
-// int avantDernier = scores[^2];     // 95 (avant-dernier élément)
-// int[] sousTableau = scores[1..4];  // { 94, 78, 95 } (du 2ème au 4ème, exclusif)
+pays[1] = "Portugal";
+Console.WriteLine(pays[1]);  // Affiche "Portugal"
 ```
 
+### Propriété Length
 
-### Parcours d'un tableau
+La propriété `Length` permet de connaître le nombre d'éléments dans un tableau :
 
-```
+```csharp
 int[] nombres = { 10, 20, 30, 40, 50 };
+Console.WriteLine($"Le tableau contient {nombres.Length} éléments.");  // Affiche 5
+```
 
-// Parcours avec une boucle for
-for (int i = 0; i < nombres.Length; i++)
+### Parcourir un tableau
+
+Il existe plusieurs façons de parcourir un tableau unidimensionnel :
+
+```csharp
+string[] fruits = { "Pomme", "Banane", "Orange", "Fraise", "Kiwi" };
+
+// 1. Avec une boucle for classique
+Console.WriteLine("Parcours avec for :");
+for (int i = 0; i < fruits.Length; i++)
 {
-    Console.WriteLine($"nombres[{i}] = {nombres[i]}");
+    Console.WriteLine($"fruits[{i}] = {fruits[i]}");
 }
 
-// Parcours avec foreach (lecture seule)
-foreach (int nombre in nombres)
+// 2. Avec une boucle foreach (plus lisible pour simplement lire les éléments)
+Console.WriteLine("\nParcours avec foreach :");
+foreach (string fruit in fruits)
 {
-    Console.WriteLine(nombre);
+    Console.WriteLine(fruit);
 }
-
-// Parcours avec LINQ
-nombres.ToList().ForEach(nombre => Console.WriteLine(nombre));
 ```
 
+### Exemple complet
 
-### Tableaux de différents types
+Voici un exemple concret d'utilisation d'un tableau unidimensionnel :
 
-```
-// Tableau de types valeur
-int[] entiers = { 1, 2, 3 };
-double[] decimaux = { 1.1, 2.2, 3.3 };
-bool[] booléens = { true, false, true };
-
-// Tableau de types référence
-string[] noms = { "Alice", "Bob", "Charlie" };
-object[] objets = { "texte", 123, true, 3.14 };
-
-// Tableau de types définis par l'utilisateur
-// Supposons qu'une classe Person soit définie
-Person[] personnes = new Person[3];
-personnes[0] = new Person("Alice", 30);
-personnes[1] = new Person("Bob", 25);
-personnes[2] = new Person("Charlie", 35);
-```
-
-
-### Tableau comme paramètre et valeur de retour
-
-```
-// Tableau comme paramètre de méthode
-void AfficherTableau(int[] tableau)
+```csharp
+static void Main(string[] args)
 {
-    foreach (int valeur in tableau)
+    // Création d'un tableau de notes
+    double[] notes = { 12.5, 15, 8.75, 14, 10 };
+
+    // Calcul de la moyenne
+    double somme = 0;
+    foreach (double note in notes)
     {
-        Console.WriteLine(valeur);
+        somme += note;
     }
-}
+    double moyenne = somme / notes.Length;
 
-// Appel avec tableau existant
-int[] nombres = { 1, 2, 3, 4, 5 };
-AfficherTableau(nombres);
-
-// Appel avec création à la volée
-AfficherTableau(new int[] { 10, 20, 30 });
-// ou
-AfficherTableau(new[] { 10, 20, 30 });
-
-// Utilisation du mot-clé params
-void AfficherNombres(params int[] nombres)
-{
-    foreach (int n in nombres)
+    // Recherche de la note maximale
+    double noteMax = notes[0];
+    for (int i = 1; i < notes.Length; i++)
     {
-        Console.WriteLine(n);
-    }
-}
-
-// Appel avec liste d'arguments variable
-AfficherNombres(1, 2, 3);
-AfficherNombres(10, 20);
-
-// Méthode retournant un tableau
-int[] CréerTableau(int taille, int valeurInitiale)
-{
-    int[] résultat = new int[taille];
-
-    for (int i = 0; i < taille; i++)
-    {
-        résultat[i] = valeurInitiale;
+        if (notes[i] > noteMax)
+        {
+            noteMax = notes[i];
+        }
     }
 
-    return résultat;
+    // Affichage des résultats
+    Console.WriteLine($"Nombre de notes : {notes.Length}");
+    Console.WriteLine($"Moyenne : {moyenne:F2}");
+    Console.WriteLine($"Note la plus élevée : {noteMax}");
 }
-
-// Utilisation
-int[] nouveauTableau = CréerTableau(5, 10);  // [10, 10, 10, 10, 10]
 ```
-
 
 ## 3.1.2. Tableaux multidimensionnels
 
-Les tableaux multidimensionnels permettent de représenter des données sous forme de matrices ou de structures à plusieurs dimensions.
+Les tableaux multidimensionnels permettent de représenter des structures de données avec plusieurs dimensions. En C#, il existe deux types de tableaux multidimensionnels : les tableaux rectangulaires et les tableaux en dents de scie (jagged arrays).
 
-### Tableaux rectangulaires (dimensions fixes)
+### Tableaux rectangulaires (2D)
 
-```
-// Déclaration d'un tableau 2D (3 lignes, 4 colonnes)
+Un tableau rectangulaire possède un nombre fixe de lignes et de colonnes. Tous les éléments sont stockés dans une structure rectangulaire.
+
+```csharp
+// Déclaration d'un tableau 2D de 3 lignes et 4 colonnes
 int[,] matrice = new int[3, 4];
 
-// Initialisation avec des valeurs
+// Initialisation d'un tableau 2D avec des valeurs
+int[,] grille = new int[,]
+{
+    { 1, 2, 3, 4 },  // ligne 0
+    { 5, 6, 7, 8 },  // ligne 1
+    { 9, 10, 11, 12 }  // ligne 2
+};
+
+// Accès aux éléments
+Console.WriteLine(grille[0, 0]);  // Affiche 1 (premier élément)
+Console.WriteLine(grille[1, 2]);  // Affiche 7 (ligne 1, colonne 2)
+
+// Modification d'un élément
+grille[2, 3] = 99;
+Console.WriteLine(grille[2, 3]);  // Affiche 99
+```
+
+### Obtenir les dimensions d'un tableau rectangulaire
+
+```csharp
 int[,] grille = new int[,]
 {
     { 1, 2, 3, 4 },
@@ -169,424 +148,418 @@ int[,] grille = new int[,]
     { 9, 10, 11, 12 }
 };
 
-// Syntaxe abrégée
-int[,] tableau2D = {
-    { 1, 2, 3 },
-    { 4, 5, 6 }
-};
+// Nombre total d'éléments
+Console.WriteLine($"Nombre total d'éléments : {grille.Length}");  // Affiche 12
 
-// Accès aux éléments
-int valeur = grille[1, 2];  // 7 (2ème ligne, 3ème colonne)
-grille[0, 3] = 42;          // Modification d'un élément
+// Nombre de dimensions
+Console.WriteLine($"Nombre de dimensions : {grille.Rank}");  // Affiche 2
 
-// Propriétés
-int dimensions = grille.Rank;       // 2 (nombre de dimensions)
-int tailleTotal = grille.Length;    // 12 (nombre total d'éléments)
-int lignes = grille.GetLength(0);   // 3 (nombre de lignes)
-int colonnes = grille.GetLength(1); // 4 (nombre de colonnes)
-
-// Parcours avec boucles imbriquées
-for (int i = 0; i < grille.GetLength(0); i++)
-{
-    for (int j = 0; j < grille.GetLength(1); j++)
-    {
-        Console.Write($"{grille[i, j]}\t");
-    }
-    Console.WriteLine();
-}
+// Taille de chaque dimension
+Console.WriteLine($"Nombre de lignes (dimension 0) : {grille.GetLength(0)}");  // Affiche 3
+Console.WriteLine($"Nombre de colonnes (dimension 1) : {grille.GetLength(1)}");  // Affiche 4
 ```
 
+### Parcourir un tableau 2D
 
-### Tableaux à 3 dimensions ou plus
-
-```
-// Tableau 3D (2 x 3 x 4)
-int[,,] cube = new int[2, 3, 4];
-
-// Initialisation
-int[,,] petit = new int[,,]
-{
-    {
-        { 1, 2 },
-        { 3, 4 },
-        { 5, 6 }
-    },
-    {
-        { 7, 8 },
-        { 9, 10 },
-        { 11, 12 }
-    }
-};  // 2 x 3 x 2
-
-// Accès
-int valeur = petit[1, 0, 1];  // 8 (2ème "plan", 1ère ligne, 2ème colonne)
-
-// Parcours
-for (int i = 0; i < petit.GetLength(0); i++)
-{
-    for (int j = 0; j < petit.GetLength(1); j++)
-    {
-        for (int k = 0; k < petit.GetLength(2); k++)
-        {
-            Console.WriteLine($"petit[{i}, {j}, {k}] = {petit[i, j, k]}");
-        }
-    }
-}
-```
-
-
-## 3.1.3. Tableaux en dents de scie (jagged arrays)
-
-Les tableaux en dents de scie (ou tableaux irréguliers) sont des tableaux de tableaux. Contrairement aux tableaux multidimensionnels, chaque "ligne" peut avoir une longueur différente.
-
-### Création et initialisation
-
-```
-// Déclaration d'un tableau de tableaux
-int[][] tableau = new int[3][];
-
-// Initialisation de chaque "ligne"
-tableau[0] = new int[] { 1, 2, 3 };
-tableau[1] = new int[] { 4, 5 };
-tableau[2] = new int[] { 6, 7, 8, 9 };
-
-// Initialisation directe
-int[][] nombres = new int[][]
-{
-    new int[] { 1, 2, 3 },
-    new int[] { 4, 5 },
-    new int[] { 6, 7, 8, 9 }
-};
-
-// Syntaxe abrégée
-int[][] valeurs = {
-    new[] { 10, 20 },
-    new[] { 30, 40, 50 },
-    new[] { 60 }
-};
-```
-
-
-### Accès aux éléments
-
-```
-int[][] triangle = new int[][]
-{
-    new int[] { 1 },
-    new int[] { 1, 1 },
-    new int[] { 1, 2, 1 },
-    new int[] { 1, 3, 3, 1 }
-};
-
-// Accès à un élément
-int milieu = triangle[2][1];  // 2 (3ème ligne, 2ème élément)
-
-// Modification d'un élément
-triangle[1][0] = 5;  // La 2ème ligne devient { 5, 1 }
-
-// Propriétés et dimensions
-int lignes = triangle.Length;                // 4 (nombre de lignes)
-int élémentsLigne3 = triangle[2].Length;     // 3 (nombre d'éléments dans la 3ème ligne)
-
-// Parcours complet
-for (int i = 0; i < triangle.Length; i++)
-{
-    for (int j = 0; j < triangle[i].Length; j++)
-    {
-        Console.Write($"{triangle[i][j]} ");
-    }
-    Console.WriteLine();
-}
-
-// Avec foreach
-foreach (int[] ligne in triangle)
-{
-    foreach (int élément in ligne)
-    {
-        Console.Write($"{élément} ");
-    }
-    Console.WriteLine();
-}
-```
-
-
-### Tableaux en dents de scie vs rectangulaires
-
-```
-// Comparaison des deux approches
-
-// 1. Tableau rectangulaire (toutes les lignes ont la même longueur)
-int[,] rectangulaire = new int[3, 4]
+```csharp
+int[,] grille = new int[,]
 {
     { 1, 2, 3, 4 },
     { 5, 6, 7, 8 },
     { 9, 10, 11, 12 }
 };
 
-// 2. Tableau en dents de scie (les lignes peuvent avoir des longueurs différentes)
-int[][] dentsDeScie = new int[][]
+// Parcours avec des boucles for imbriquées
+for (int i = 0; i < grille.GetLength(0); i++)  // lignes
 {
-    new int[] { 1, 2, 3, 4 },
-    new int[] { 5, 6 },
-    new int[] { 7, 8, 9 }
-};
-
-// Avantages des tableaux rectangulaires:
-// - Plus compacts en mémoire
-// - Syntaxe plus simple pour les dimensions uniformes
-// - Plus faciles à parcourir uniformément
-
-// Avantages des tableaux en dents de scie:
-// - Flexibilité pour des lignes de longueurs variables
-// - Possibilité d'ajouter/supprimer des lignes entières
-// - Chaque ligne est un tableau standard utilisable avec des méthodes Array
-
-// Cas d'utilisation typiques:
-// - Tableaux rectangulaires: matrices mathématiques, grilles de jeu, images
-// - Tableaux en dents de scie: données avec structure variable, triangle de Pascal
-```
-
-
-### Tableaux en dents de scie à plusieurs niveaux
-
-```
-// Tableau à trois niveaux
-int[][][] triplement = new int[2][][];
-
-triplement[0] = new int[3][];
-triplement[0][0] = new int[] { 1, 2 };
-triplement[0][1] = new int[] { 3 };
-triplement[0][2] = new int[] { 4, 5, 6 };
-
-triplement[1] = new int[2][];
-triplement[1][0] = new int[] { 7, 8, 9 };
-triplement[1][1] = new int[] { 10 };
-
-// Accès
-int valeur = triplement[0][2][1];  // 5
-
-// Parcours à trois niveaux
-for (int i = 0; i < triplement.Length; i++)
-{
-    for (int j = 0; j < triplement[i].Length; j++)
+    for (int j = 0; j < grille.GetLength(1); j++)  // colonnes
     {
-        for (int k = 0; k < triplement[i][j].Length; k++)
+        Console.Write($"{grille[i, j]}\t");
+    }
+    Console.WriteLine();  // Nouvelle ligne après chaque ligne de la matrice
+}
+```
+
+### Exemple pratique : Plateau de jeu
+
+```csharp
+static void AfficherPlateau(char[,] plateau)
+{
+    int lignes = plateau.GetLength(0);
+    int colonnes = plateau.GetLength(1);
+
+    // Afficher les indices de colonnes
+    Console.Write("  ");
+    for (int j = 0; j < colonnes; j++)
+    {
+        Console.Write($" {j} ");
+    }
+    Console.WriteLine();
+
+    // Afficher le plateau
+    for (int i = 0; i < lignes; i++)
+    {
+        Console.Write($"{i} ");  // Indice de ligne
+        for (int j = 0; j < colonnes; j++)
         {
-            Console.WriteLine($"triplement[{i}][{j}][{k}] = {triplement[i][j][k]}");
+            Console.Write($"[{plateau[i, j]}]");
+        }
+        Console.WriteLine();
+    }
+}
+
+static void Main(string[] args)
+{
+    // Créer un plateau de jeu 3x3 (morpion/tic-tac-toe)
+    char[,] plateau = new char[3, 3];
+
+    // Initialiser avec des espaces vides
+    for (int i = 0; i < 3; i++)
+    {
+        for (int j = 0; j < 3; j++)
+        {
+            plateau[i, j] = ' ';
+        }
+    }
+
+    // Simuler quelques coups
+    plateau[0, 0] = 'X';
+    plateau[1, 1] = 'O';
+    plateau[0, 2] = 'X';
+
+    // Afficher le plateau
+    AfficherPlateau(plateau);
+}
+```
+
+### Tableaux de dimension supérieure
+
+C# supporte également les tableaux de dimension supérieure à 2. Voici un exemple de tableau 3D :
+
+```csharp
+// Tableau 3D (cube de données)
+int[,,] cube = new int[3, 3, 3];
+
+// Initialisation d'une valeur
+cube[0, 1, 2] = 42;
+
+// Parcours d'un tableau 3D
+for (int i = 0; i < cube.GetLength(0); i++)
+{
+    for (int j = 0; j < cube.GetLength(1); j++)
+    {
+        for (int k = 0; k < cube.GetLength(2); k++)
+        {
+            Console.WriteLine($"cube[{i}, {j}, {k}] = {cube[i, j, k]}");
         }
     }
 }
 ```
 
+## 3.1.3. Tableaux en dents de scie (jagged arrays)
+
+Les tableaux en dents de scie (ou tableaux irréguliers) sont des tableaux de tableaux. Contrairement aux tableaux multidimensionnels rectangulaires, chaque "ligne" peut avoir une longueur différente.
+
+### Déclaration et initialisation
+
+```csharp
+// Déclaration d'un tableau de tableaux d'entiers
+int[][] nombres = new int[3][];
+
+// Initialisation de chaque sous-tableau avec des tailles différentes
+nombres[0] = new int[4] { 1, 2, 3, 4 };
+nombres[1] = new int[2] { 5, 6 };
+nombres[2] = new int[5] { 7, 8, 9, 10, 11 };
+
+// Initialisation directe
+int[][] matrice = new int[][]
+{
+    new int[] { 1, 2, 3 },
+    new int[] { 4, 5 },
+    new int[] { 6, 7, 8, 9 }
+};
+```
+
+### Accès aux éléments
+
+```csharp
+int[][] matrice = new int[][]
+{
+    new int[] { 1, 2, 3 },
+    new int[] { 4, 5 },
+    new int[] { 6, 7, 8, 9 }
+};
+
+// Accès aux éléments
+Console.WriteLine(matrice[0][1]);  // Affiche 2
+Console.WriteLine(matrice[2][3]);  // Affiche 9
+
+// Modification d'un élément
+matrice[1][0] = 42;
+Console.WriteLine(matrice[1][0]);  // Affiche 42
+```
+
+### Parcourir un tableau en dents de scie
+
+```csharp
+int[][] matrice = new int[][]
+{
+    new int[] { 1, 2, 3 },
+    new int[] { 4, 5 },
+    new int[] { 6, 7, 8, 9 }
+};
+
+// Parcours avec des boucles imbriquées
+for (int i = 0; i < matrice.Length; i++)
+{
+    Console.Write($"Ligne {i}: ");
+
+    for (int j = 0; j < matrice[i].Length; j++)
+    {
+        Console.Write($"{matrice[i][j]} ");
+    }
+
+    Console.WriteLine();
+}
+```
+
+### Cas d'utilisation
+
+Les tableaux en dents de scie sont utiles lorsque vous avez besoin de stocker des données avec des longueurs variables par ligne :
+
+```csharp
+// Exemple : Liste d'étudiants avec leurs notes (nombre variable par étudiant)
+string[] noms = { "Alice", "Bob", "Charlie" };
+double[][] notes = new double[3][];
+
+notes[0] = new double[] { 15, 12, 18, 10 };  // 4 notes pour Alice
+notes[1] = new double[] { 14, 13 };          // 2 notes pour Bob
+notes[2] = new double[] { 16, 15, 17 };      // 3 notes pour Charlie
+
+// Calculer et afficher la moyenne de chaque étudiant
+for (int i = 0; i < noms.Length; i++)
+{
+    double somme = 0;
+    foreach (double note in notes[i])
+    {
+        somme += note;
+    }
+    double moyenne = somme / notes[i].Length;
+
+    Console.WriteLine($"{noms[i]} a une moyenne de {moyenne:F2} (sur {notes[i].Length} notes)");
+}
+```
 
 ## 3.1.4. Méthodes utiles pour manipuler des tableaux
 
-La classe `Array` fournit de nombreuses méthodes statiques pour travailler avec des tableaux.
+La classe `System.Array` fournit de nombreuses méthodes statiques pour manipuler les tableaux. Voici les plus couramment utilisées :
 
-### Tri et recherche
+### Redimensionner un tableau
 
-```
-// Tableau de démonstration
-int[] nombres = { 23, 12, 86, 32, 15, 89, 45, 76 };
-string[] noms = { "Zoe", "Alice", "Bob", "Charlie", "David" };
+```csharp
+int[] nombres = { 1, 2, 3 };
+Console.WriteLine($"Taille initiale : {nombres.Length}");  // Affiche 3
 
-// Tri d'un tableau
-Array.Sort(nombres);  // [12, 15, 23, 32, 45, 76, 86, 89]
+// Redimensionner le tableau à 5 éléments
+Array.Resize(ref nombres, 5);
+Console.WriteLine($"Nouvelle taille : {nombres.Length}");  // Affiche 5
 
-// Tri d'un tableau avec un comparateur personnalisé
-Array.Sort(noms, StringComparer.OrdinalIgnoreCase);  // ["Alice", "Bob", "Charlie", "David", "Zoe"]
-
-// Tri avec deux tableaux (le premier contrôle le tri, le second suit)
-int[] âges = { 30, 25, 40, 20, 35 };
-string[] personnes = { "Alice", "Bob", "Charlie", "David", "Eve" };
-Array.Sort(âges, personnes);  // Trie les deux tableaux selon les âges
-
-// Recherche dans un tableau trié (retourne l'index)
-int index = Array.BinarySearch(nombres, 45);  // Plus rapide que IndexOf sur un tableau trié
-
-// Recherche linéaire (fonctionne sur des tableaux non triés)
-int position = Array.IndexOf(noms, "Charlie");
-int dernière = Array.LastIndexOf(noms, "Bob");
-
-// Recherche avec prédicat
-int premier = Array.FindIndex(nombres, n => n > 50);  // Index du premier élément > 50
-int[] grands = Array.FindAll(nombres, n => n > 50);   // Tous les éléments > 50
-
-// Vérification
-bool tousPositifs = Array.TrueForAll(nombres, n => n > 0);
-bool auMoinsUn = Array.Exists(nombres, n => n % 2 == 0);
-```
-
-
-### Modification de tableaux
-
-```
-int[] valeurs = { 1, 2, 3, 4, 5 };
-
-// Copie de tableau
-int[] copie = new int[valeurs.Length];
-Array.Copy(valeurs, copie, valeurs.Length);
-
-// Copie avec décalage
-int[] destination = new int[10];  // Tableau plus grand
-Array.Copy(valeurs, 0, destination, 2, valeurs.Length);
-// destination = [0, 0, 1, 2, 3, 4, 5, 0, 0, 0]
-
-// Création d'une copie exacte
-int[] clone = (int[])valeurs.Clone();
-
-// Remplissage d'un tableau
-int[] zéros = new int[5];
-Array.Fill(zéros, 0);  // [0, 0, 0, 0, 0]
-
-// Remplissage partiel
-Array.Fill(zéros, 9, 1, 3);  // [0, 9, 9, 9, 0]
-
-// Inverser un tableau
-Array.Reverse(valeurs);  // [5, 4, 3, 2, 1]
-
-// Inverser une portion
-Array.Reverse(valeurs, 1, 3);  // [5, 2, 3, 4, 1]
-
-// Redimensionnement (crée un nouveau tableau)
-Array.Resize(ref valeurs, 7);  // [5, 2, 3, 4, 1, 0, 0]
-Array.Resize(ref valeurs, 3);  // [5, 2, 3]
-```
-
-
-### Méthodes d'extension LINQ
-
-Les tableaux implémentent `IEnumerable<T>`, ce qui permet d'utiliser les puissantes méthodes d'extension LINQ.
-
-```
-int[] données = { 5, 2, 9, 1, 5, 6, 3, 8, 4, 7 };
-
-// Filtrage
-int[] supérieursA5 = données.Where(x => x > 5).ToArray();  // [9, 6, 8, 7]
-
-// Projection
-int[] carrés = données.Select(x => x * x).ToArray();  // [25, 4, 81, 1, 25, 36, 9, 64, 16, 49]
-
-// Tri
-int[] triés = données.OrderBy(x => x).ToArray();  // [1, 2, 3, 4, 5, 5, 6, 7, 8, 9]
-int[] triésDesc = données.OrderByDescending(x => x).ToArray();  // [9, 8, 7, 6, 5, 5, 4, 3, 2, 1]
-
-// Aggrégation
-int somme = données.Sum();  // 50
-double moyenne = données.Average();  // 5.0
-int min = données.Min();  // 1
-int max = données.Max();  // 9
-int compteur = données.Count();  // 10
-int compteurPair = données.Count(x => x % 2 == 0);  // 5
-
-// Autres opérations
-bool tousPairs = données.All(x => x % 2 == 0);  // false
-bool auMoinsUnPair = données.Any(x => x % 2 == 0);  // true
-int[] distincts = données.Distinct().ToArray();  // [5, 2, 9, 1, 6, 3, 8, 4, 7]
-int[] prémiers3 = données.Take(3).ToArray();  // [5, 2, 9]
-int[] sauf3premiers = données.Skip(3).ToArray();  // [1, 5, 6, 3, 8, 4, 7]
-
-// Combinaison d'opérations
-int[] résultat = données
-    .Where(x => x % 2 == 0)     // Garder les pairs
-    .OrderBy(x => x)            // Trier croissant
-    .Skip(1)                    // Sauter le premier
-    .Take(2)                    // Prendre les 2 suivants
-    .ToArray();                 // [4, 6]
-```
-
-
-### Comparaison entre .NET Framework 4.7.2 et .NET 8
-
-```
-// Fonctionnalités disponibles uniquement dans .NET Core/.NET 8 (pas en .NET Framework 4.7.2)
-
-// 1. Index et Range
-int[] données = { 1, 2, 3, 4, 5 };
-
-// Disponible dans .NET Core 3.0+ et .NET 8
-// Index index = ^1;              // Dernier élément
-// int dernier = données[index];  // 5
-// Range plage = 1..4;            // Du deuxième au quatrième (exclusif)
-// int[] milieu = données[plage]; // [2, 3, 4]
-
-// 2. Span<T> (disponible en .NET Standard 2.1, .NET Core 2.0+ et .NET 8)
-// Span<int> section = données.AsSpan(1, 3);  // Vue sur [2, 3, 4]
-// section[0] = 10;                           // Modifie l'original: [1, 10, 3, 4, 5]
-
-// 3. Méthodes d'extension utiles (ajoutées en versions récentes)
-
-// Available in .NET Standard 2.1+, .NET Core 2.1+ or .NET 8
-// indexOf = données.AsSpan().IndexOf(3);    // 2
-```
-
-
-### Cas d'utilisation courants
-
-```
-// 1. Manipulation d'image (tableau 2D)
-byte[,] image = new byte[height, width];  // Image en niveaux de gris
-
-// Application d'un filtre
-for (int y = 1; y < height - 1; y++)
+// Les nouveaux éléments sont initialisés avec la valeur par défaut (0 pour les int)
+foreach (int n in nombres)
 {
-    for (int x = 1; x < width - 1; x++)
-    {
-        // Filtre de flou (moyenne des voisins)
-        byte somme = (byte)(
-            image[y-1, x-1] + image[y-1, x] + image[y-1, x+1] +
-            image[y, x-1]   + image[y, x]   + image[y, x+1] +
-            image[y+1, x-1] + image[y+1, x] + image[y+1, x+1]
-        );
-        image[y, x] = (byte)(somme / 9);
-    }
+    Console.Write($"{n} ");  // Affiche 1 2 3 0 0
 }
+Console.WriteLine();
 
-// 2. Implémentation d'une matrice creuse (tableau en dents de scie)
-// Utile quand la plupart des cellules sont vides
-Dictionary<int, int[]> matriceCreuse = new Dictionary<int, int[]>();
-matriceCreuse[3] = new int[] { 1, 0, 7 };  // Seulement la ligne 3 contient des données
-
-// 3. Tampon circulaire avec tableau (pour traitement de flux)
-public class TamponCirculaire<T>
+// Réduire la taille (attention: les éléments en trop sont perdus)
+Array.Resize(ref nombres, 2);
+foreach (int n in nombres)
 {
-    private T[] _données;
-    private int _tête = 0;
-    private int _queue = 0;
-    private int _taille = 0;
-
-    public TamponCirculaire(int capacité)
-    {
-        _données = new T[capacité];
-    }
-
-    public void Ajouter(T item)
-    {
-        if (_taille == _données.Length)
-            throw new InvalidOperationException("Le tampon est plein");
-
-        _données[_queue] = item;
-        _queue = (_queue + 1) % _données.Length;
-        _taille++;
-    }
-
-    public T Retirer()
-    {
-        if (_taille == 0)
-            throw new InvalidOperationException("Le tampon est vide");
-
-        T item = _données[_tête];
-        _tête = (_tête + 1) % _données.Length;
-        _taille--;
-        return item;
-    }
-
-    public int Taille => _taille;
-    public int Capacité => _données.Length;
+    Console.Write($"{n} ");  // Affiche 1 2
 }
 ```
 
+### Trier un tableau
 
----
+```csharp
+int[] nombres = { 5, 2, 8, 1, 9, 3 };
 
-Cette section a couvert les bases et les techniques avancées de manipulation des tableaux en C#. Les tableaux constituent le fondement de nombreuses structures de données plus complexes, et leur maîtrise est essentielle pour tout développeur C#. Dans les sections suivantes, nous explorerons les collections génériques qui offrent plus de flexibilité que les tableaux traditionnels.
+// Tri dans l'ordre croissant
+Array.Sort(nombres);
+
+Console.WriteLine("Tableau trié :");
+foreach (int n in nombres)
+{
+    Console.Write($"{n} ");  // Affiche 1 2 3 5 8 9
+}
+Console.WriteLine();
+
+// Tri d'un tableau de chaînes
+string[] fruits = { "Orange", "Pomme", "Banane", "Kiwi" };
+Array.Sort(fruits);
+
+foreach (string fruit in fruits)
+{
+    Console.WriteLine(fruit);  // Affiche Banane, Kiwi, Orange, Pomme (ordre alphabétique)
+}
+```
+
+### Inverser l'ordre des éléments
+
+```csharp
+int[] nombres = { 1, 2, 3, 4, 5 };
+
+// Inverser le tableau
+Array.Reverse(nombres);
+
+Console.WriteLine("Tableau inversé :");
+foreach (int n in nombres)
+{
+    Console.Write($"{n} ");  // Affiche 5 4 3 2 1
+}
+```
+
+### Rechercher des éléments
+
+```csharp
+string[] animaux = { "Chat", "Chien", "Lapin", "Oiseau", "Poisson" };
+
+// Rechercher un élément
+int index = Array.IndexOf(animaux, "Lapin");
+Console.WriteLine($"'Lapin' trouvé à l'index {index}");  // Affiche 2
+
+// Vérifier si un élément existe
+bool contientChat = Array.Exists(animaux, animal => animal == "Chat");
+Console.WriteLine($"Le tableau contient 'Chat' : {contientChat}");  // Affiche True
+
+// Trouver le premier élément qui correspond à une condition
+string premierAvecC = Array.Find(animaux, animal => animal.StartsWith("C"));
+Console.WriteLine($"Premier animal commençant par 'C' : {premierAvecC}");  // Affiche Chat
+
+// Trouver tous les éléments qui correspondent à une condition
+string[] tousAvecC = Array.FindAll(animaux, animal => animal.StartsWith("C"));
+Console.WriteLine("Tous les animaux commençant par 'C' :");
+foreach (string animal in tousAvecC)
+{
+    Console.WriteLine(animal);  // Affiche Chat, Chien
+}
+```
+
+### Copier un tableau
+
+```csharp
+int[] source = { 1, 2, 3, 4, 5 };
+
+// Méthode 1 : Array.Copy
+int[] destination1 = new int[source.Length];
+Array.Copy(source, destination1, source.Length);
+
+// Méthode 2 : CopyTo
+int[] destination2 = new int[source.Length];
+source.CopyTo(destination2, 0);
+
+// Méthode 3 : Clone (crée une copie superficielle)
+int[] destination3 = (int[])source.Clone();
+
+// Vérification que les copies sont indépendantes
+source[0] = 99;
+Console.WriteLine($"Source[0] = {source[0]}");  // Affiche 99
+Console.WriteLine($"Destination1[0] = {destination1[0]}");  // Affiche 1
+Console.WriteLine($"Destination2[0] = {destination2[0]}");  // Affiche 1
+Console.WriteLine($"Destination3[0] = {destination3[0]}");  // Affiche 1
+```
+
+### Remplir un tableau avec une valeur
+
+```csharp
+int[] nombres = new int[5];
+
+// Remplir le tableau avec la valeur 42
+Array.Fill(nombres, 42);
+
+foreach (int n in nombres)
+{
+    Console.Write($"{n} ");  // Affiche 42 42 42 42 42
+}
+```
+
+### Vérifier si tous les éléments répondent à une condition
+
+```csharp
+int[] nombres = { 2, 4, 6, 8, 10 };
+
+// Vérifier si tous les éléments sont pairs
+bool tousPairs = Array.TrueForAll(nombres, n => n % 2 == 0);
+Console.WriteLine($"Tous les nombres sont pairs : {tousPairs}");  // Affiche True
+
+// Vérifier si tous les éléments sont supérieurs à 5
+bool tousSup5 = Array.TrueForAll(nombres, n => n > 5);
+Console.WriteLine($"Tous les nombres sont > 5 : {tousSup5}");  // Affiche False
+```
+
+### Convertir un tableau
+
+```csharp
+int[] entiers = { 1, 2, 3, 4, 5 };
+
+// Convertir un tableau d'entiers en tableau de doubles
+double[] doubles = Array.ConvertAll(entiers, n => (double)n);
+
+// Convertir un tableau d'entiers en tableau de chaînes
+string[] chaines = Array.ConvertAll(entiers, n => n.ToString());
+
+foreach (string s in chaines)
+{
+    Console.Write($"{s} ");  // Affiche "1 2 3 4 5"
+}
+```
+
+## Quelques conseils pratiques
+
+### Choix entre types de tableaux
+
+- **Tableau unidimensionnel** : pour des listes simples d'éléments du même type.
+- **Tableau multidimensionnel (rectangulaire)** : pour des données structurées en grille avec des dimensions fixes.
+- **Tableau en dents de scie** : lorsque chaque "ligne" peut avoir une longueur différente.
+
+### Bonnes pratiques
+
+1. **Vérifiez les limites** : Avant d'accéder à un élément par son indice, assurez-vous qu'il est dans les limites valides du tableau pour éviter les exceptions `IndexOutOfRangeException`.
+
+```csharp
+if (index >= 0 && index < tableau.Length)
+{
+    // Accès sécurisé
+    var element = tableau[index];
+}
+```
+
+2. **Préférez foreach quand c'est possible** : Pour parcourir tous les éléments d'un tableau sans modification, `foreach` est plus lisible et moins sujet aux erreurs.
+
+3. **Utilisez les méthodes LINQ** : Pour des opérations complexes sur les tableaux, les méthodes LINQ peuvent rendre votre code plus concis et lisible.
+
+```csharp
+int[] nombres = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
+
+// Filtrer les nombres pairs et les multiplier par 2
+var resultat = nombres.Where(n => n % 2 == 0).Select(n => n * 2);
+
+foreach (var n in resultat)
+{
+    Console.Write($"{n} ");  // Affiche 4 8 12 16 20
+}
+```
+
+4. **Attention aux performances** : Les tableaux de grande taille dans des dimensions élevées peuvent consommer beaucoup de mémoire. Pour les structures de données très complexes, envisagez d'autres approches.
+
+### Exercices pratiques
+
+Pour bien maîtriser les tableaux, essayez ces exercices :
+
+1. Créez un tableau de nombres et calculez la somme, la moyenne, le minimum et le maximum.
+2. Implémentez un algorithme de tri simple (comme le tri à bulles) sur un tableau d'entiers.
+3. Créez une matrice 2D pour représenter un jeu de plateau (comme les échecs ou le morpion).
+4. Utilisez un tableau en dents de scie pour stocker une liste de listes d'éléments de longueur variable.
+5. Implémentez un algorithme de recherche binaire dans un tableau trié.
+
+Ces exercices vous aideront à développer vos compétences et à comprendre les différentes façons d'utiliser les tableaux en C#.
