--- a/04. Méthodes et fonctions/4.1. Définition et appel de méthodes.md
+++ b/04. Méthodes et fonctions/4.1. Définition et appel de méthodes.md
@@ -1,448 +1,396 @@
- 
-# 4.1. Définition et appel de méthodes
+# 4.1. Définition et appel de méthodes en C#
 
-Les méthodes sont des blocs de code qui exécutent une tâche spécifique et constituent les éléments fondamentaux d'un programme C#. Elles permettent d'organiser le code, de le rendre réutilisable et plus facile à maintenir. Dans cette section, nous allons explorer comment définir et appeler des méthodes en C#.
+Les méthodes sont au cœur de la programmation en C#. Elles vous permettent d'organiser votre code en blocs fonctionnels réutilisables. Dans cette section, nous allons explorer comment définir et appeler des méthodes, comprendre leurs signatures, les différents types de retour, et la différence entre méthodes statiques et méthodes d'instance.
 
 ## 4.1.1. Signature de méthode
 
-La signature d'une méthode est composée de plusieurs éléments qui la définissent de manière unique dans une classe :
+La signature d'une méthode est sa "carte d'identité". Elle permet au compilateur de distinguer une méthode d'une autre et de déterminer quelle version d'une méthode doit être appelée lorsque plusieurs méthodes portent le même nom (surcharge).
 
-- **Modificateurs d'accès** : définissent la visibilité de la méthode (`public`, `private`, `protected`, `internal`)
-- **Type de retour** : indique le type de données que la méthode renvoie
-- **Nom** : identifiant unique pour la méthode (suit les conventions de nommage PascalCase)
-- **Paramètres** : données d'entrée que la méthode peut accepter
-- **Corps de la méthode** : contient le code à exécuter
+### Composants d'une signature de méthode
 
-### Syntaxe de base
+Une signature de méthode complète comprend :
 
-```textmate
-[modificateurs] [type_retour] [nom_méthode]([paramètres])
+- **Modificateurs d'accès** : déterminent la visibilité de la méthode (`public`, `private`, `protected`, `internal`)
+- **Type de retour** : le type de données que la méthode retourne
+- **Nom de la méthode** : identifiant utilisé pour appeler la méthode
+- **Paramètres** : les données que la méthode accepte en entrée
+- **Modificateurs supplémentaires** : comme `static`, `virtual`, `override`, etc.
+
+Voici la syntaxe générale :
+
+```csharp
+[modificateurs_accès] [modificateurs_supplémentaires] [type_retour] [nom_methode]([paramètres])
 {
     // Corps de la méthode
     // Instructions à exécuter
 }
 ```
 
+### Exemples de signatures de méthodes
 
-### Exemples de signatures
-
-```textmate
-// Méthode publique sans paramètre retournant un entier
-public int CalculerAge()
-
-// Méthode privée acceptant deux paramètres et retournant une chaîne
-private string FormatNomComplet(string prénom, string nom)
-
-// Méthode protégée acceptant un paramètre de type complexe sans valeur de retour
-protected void TraiterCommande(Commande commande)
-```
-
-
-### Paramètres de méthode
-
-Les paramètres permettent de passer des données à une méthode. C# offre plusieurs façons de définir des paramètres :
-
-#### Paramètres standards
-
-```textmate
-public double CalculerMontantTTC(double montantHT, double tauxTVA)
+```csharp
+// Méthode publique qui retourne un entier et prend deux paramètres entiers
+public int Addition(int nombre1, int nombre2)
 {
-    return montantHT * (1 + tauxTVA);
+    return nombre1 + nombre2;
 }
 
-// Appel
-double total = CalculerMontantTTC(100.0, 0.20);
-```
-
-
-#### Paramètres nommés (disponibles dans toutes les versions)
-
-```textmate
-// Appel avec paramètres nommés
-double total = CalculerMontantTTC(montantHT: 100.0, tauxTVA: 0.20);
-
-// L'ordre n'a plus d'importance
-double total = CalculerMontantTTC(tauxTVA: 0.20, montantHT: 100.0);
-```
-
-
-#### Paramètres optionnels
-
-```textmate
-public double CalculerMontantTTC(double montantHT, double tauxTVA = 0.20)
+// Méthode privée qui ne retourne rien et prend une chaîne de caractères
+private void AfficherMessage(string message)
 {
-    return montantHT * (1 + tauxTVA);
+    Console.WriteLine(message);
 }
 
-// Appel sans spécifier le taux TVA (utilise la valeur par défaut)
-double total = CalculerMontantTTC(100.0);
-```
-
-
-#### Paramètres de sortie (out)
-
-```textmate
-public bool TryParse(string input, out int result)
+// Méthode statique publique qui retourne un booléen et prend un entier
+public static bool EstPair(int nombre)
 {
-    try
-    {
-        result = int.Parse(input);
-        return true;
-    }
-    catch
-    {
-        result = 0;
-        return false;
-    }
-}
-
-// Utilisation dans .NET Framework 4.7.2
-int nombre;
-if (TryParse("123", out nombre))
-{
-    Console.WriteLine($"Conversion réussie : {nombre}");
-}
-
-// Utilisation simplifiée dans .NET 8
-if (TryParse("123", out int nombre))
-{
-    Console.WriteLine($"Conversion réussie : {nombre}");
+    return nombre % 2 == 0;
 }
 ```
 
+### Paramètres de méthodes
 
-#### Paramètres de référence (ref)
+Les paramètres sont les données qu'une méthode accepte en entrée. Voici différentes façons de les définir :
 
-```textmate
-public void Permuter(ref int a, ref int b)
+#### Paramètres simples
+
+```csharp
+public void Saluer(string nom)
 {
-    int temp = a;
-    a = b;
-    b = temp;
+    Console.WriteLine($"Bonjour, {nom} !");
+}
+```
+
+#### Paramètres avec valeur par défaut
+
+```csharp
+public void Saluer(string nom = "ami")
+{
+    Console.WriteLine($"Bonjour, {nom} !");
 }
 
-// Utilisation
-int x = 5, y = 10;
-Permuter(ref x, ref y);
-// Après l'appel : x = 10, y = 5
+// Peut être appelé comme ceci :
+// Saluer();         // Affiche : "Bonjour, ami !"
+// Saluer("Marie");  // Affiche : "Bonjour, Marie !"
 ```
 
+#### Paramètres nommés (lors de l'appel)
 
-#### Nombre variable de paramètres (params)
-
-```textmate
-public double Calculer(string opération, params double[] valeurs)
+```csharp
+public void AfficherInfos(string nom, int age, string ville)
 {
-    switch (opération)
-    {
-        case "somme":
-            return valeurs.Sum();
-        case "moyenne":
-            return valeurs.Average();
-        default:
-            return 0;
-    }
+    Console.WriteLine($"{nom}, {age} ans, habite à {ville}");
 }
 
-// Appels
-double somme = Calculer("somme", 1, 2, 3, 4, 5);
-double moyenne = Calculer("moyenne", 10, 20, 30);
+// Peut être appelé comme ceci :
+// AfficherInfos(nom: "Pierre", age: 30, ville: "Paris");
+// AfficherInfos(ville: "Lyon", nom: "Sophie", age: 25); // Ordre différent grâce aux noms
 ```
-
-
-### Différences entre .NET Framework 4.7.2 et .NET 8
-
-Dans .NET 8, C# a introduit de nouvelles fonctionnalités pour les paramètres :
-
-```textmate
-// .NET 8 - Déclaration de variable dans l'instruction out
-bool succès = int.TryParse("123", out int résultat);
-
-// .NET Framework 4.7.2 - Doit déclarer la variable séparément
-int résultat;
-bool succès = int.TryParse("123", out résultat);
-```
-
 
 ## 4.1.2. Valeurs de retour et void
 
-En C#, une méthode peut retourner une valeur d'un type spécifique ou aucune valeur (void).
+Chaque méthode en C# peut retourner une valeur ou ne rien retourner. Le type de retour est spécifié dans la signature de la méthode.
 
-### Méthodes retournant une valeur
+### Méthodes avec valeur de retour
 
-```textmate
-public int Additionner(int a, int b)
+Lorsqu'une méthode retourne une valeur, vous devez spécifier le type de cette valeur dans sa signature et utiliser l'instruction `return` pour renvoyer la valeur :
+
+```csharp
+// Méthode qui retourne un entier
+public int Multiplier(int a, int b)
 {
-    return a + b;
+    return a * b;
 }
 
-public string ObtenirNomComplet(string prénom, string nom)
+// Méthode qui retourne une chaîne de caractères
+public string FormatNomComplet(string prenom, string nom)
 {
-    return $"{prénom} {nom}";
+    return $"{prenom} {nom}";
 }
 
-public bool EstMajeur(int âge)
+// Méthode qui retourne un booléen
+public bool EstMajeur(int age)
 {
-    return âge >= 18;
-}
-
-public List<string> FiltrerListe(List<string> liste, string filtre)
-{
-    return liste.Where(item => item.Contains(filtre)).ToList();
-}
-```
-
-
-Une méthode qui déclare un type de retour doit utiliser l'instruction `return` pour renvoyer une valeur compatible avec ce type.
-
-### Méthodes void (sans valeur de retour)
-
-```textmate
-public void AfficherMessage(string message)
-{
-    Console.WriteLine(message);
-    // Pas de return nécessaire
-}
-
-public void EnregistrerJournal(string événement)
-{
-    File.AppendAllText("journal.log", $"{DateTime.Now}: {événement}\n");
+    return age >= 18;
 }
 ```
 
+Pour appeler une méthode qui retourne une valeur, vous pouvez :
+- Stocker la valeur retournée dans une variable
+- Utiliser la valeur directement dans une expression
+- Ignorer la valeur retournée (mais ce n'est généralement pas recommandé)
 
-L'instruction `return` peut être utilisée dans une méthode void pour sortir prématurément :
+```csharp
+// Stocker la valeur dans une variable
+int resultat = Multiplier(4, 5);
+Console.WriteLine(resultat);  // Affiche : 20
 
-```textmate
-public void TraiterDonnées(string[] données)
+// Utiliser la valeur directement
+Console.WriteLine(Multiplier(3, 7));  // Affiche : 21
+
+// Utiliser la valeur dans une condition
+if (EstMajeur(16))
 {
-    if (données == null || données.Length == 0)
+    Console.WriteLine("La personne est majeure");
+}
+else
+{
+    Console.WriteLine("La personne est mineure");
+}
+```
+
+### Méthodes sans valeur de retour (void)
+
+Lorsqu'une méthode ne doit pas retourner de valeur, utilisez le mot-clé `void` comme type de retour :
+
+```csharp
+public void AfficherDate()
+{
+    Console.WriteLine(DateTime.Now.ToString("dd/MM/yyyy"));
+}
+
+public void EnvoyerEmail(string destinataire, string sujet, string corps)
+{
+    // Code pour envoyer un email
+    Console.WriteLine($"Email envoyé à {destinataire}");
+}
+```
+
+Les méthodes `void` sont appelées pour leur effet secondaire (affichage, modification d'état, etc.) et non pour obtenir une valeur :
+
+```csharp
+// Appel d'une méthode void
+AfficherDate();
+EnvoyerEmail("contact@exemple.com", "Bienvenue", "Bienvenue sur notre site !");
+```
+
+Dans une méthode `void`, vous pouvez utiliser l'instruction `return` sans valeur pour sortir prématurément de la méthode :
+
+```csharp
+public void VerifierAge(int age)
+{
+    if (age < 0)
     {
+        Console.WriteLine("L'âge ne peut pas être négatif");
         return; // Sort de la méthode
     }
 
-    // Suite du traitement...
+    Console.WriteLine($"Âge vérifié : {age} ans");
 }
 ```
-
-
-### Retour de plusieurs valeurs
-
-#### Utilisation des tuples (.NET Framework 4.7.2)
-
-```textmate
-// Avec classes auxiliaires
-public class StatistiquesRésultat
-{
-    public double Moyenne { get; set; }
-    public double Minimum { get; set; }
-    public double Maximum { get; set; }
-}
-
-public StatistiquesRésultat CalculerStatistiques(double[] valeurs)
-{
-    return new StatistiquesRésultat
-    {
-        Moyenne = valeurs.Average(),
-        Minimum = valeurs.Min(),
-        Maximum = valeurs.Max()
-    };
-}
-
-// Utilisation
-var stats = CalculerStatistiques(new double[] { 1, 2, 3, 4, 5 });
-Console.WriteLine($"Moyenne: {stats.Moyenne}, Min: {stats.Minimum}, Max: {stats.Maximum}");
-```
-
-
-#### Utilisation des tuples (.NET 8)
-
-```textmate
-public (double Moyenne, double Minimum, double Maximum) CalculerStatistiques(double[] valeurs)
-{
-    return (
-        valeurs.Average(),
-        valeurs.Min(),
-        valeurs.Max()
-    );
-}
-
-// Utilisation
-var stats = CalculerStatistiques(new double[] { 1, 2, 3, 4, 5 });
-Console.WriteLine($"Moyenne: {stats.Moyenne}, Min: {stats.Minimum}, Max: {stats.Maximum}");
-
-// Ou avec décomposition
-var (moy, min, max) = CalculerStatistiques(new double[] { 1, 2, 3, 4, 5 });
-Console.WriteLine($"Moyenne: {moy}, Min: {min}, Max: {max}");
-```
-
 
 ## 4.1.3. Méthodes statiques vs d'instance
 
-En C#, les méthodes peuvent être définies comme statiques ou d'instance, ce qui influence la façon dont elles sont appelées et les données auxquelles elles ont accès.
+En C#, il existe deux types principaux de méthodes : les méthodes d'instance et les méthodes statiques. Comprendre la différence est essentiel pour bien structurer votre code.
 
 ### Méthodes d'instance
 
-Les méthodes d'instance sont liées à une instance spécifique d'une classe et peuvent accéder aux champs et propriétés de cette instance.
+Les méthodes d'instance sont liées à une instance spécifique d'une classe. Elles :
+- Peuvent accéder aux champs et propriétés d'instance de la classe
+- Sont appelées sur un objet spécifique
+- Peuvent utiliser le mot-clé `this` pour référencer l'instance courante
 
-```textmate
-public class Compte
+```csharp
+public class Calculatrice
 {
-    private decimal solde;
-
-    public Compte(decimal soldeInitial)
-    {
-        solde = soldeInitial;
-    }
+    // Champ d'instance
+    private int _memoire;
 
     // Méthode d'instance
-    public void Déposer(decimal montant)
+    public int Additionner(int a, int b)
     {
-        if (montant <= 0)
-            throw new ArgumentException("Le montant doit être positif");
-
-        solde += montant;
+        int resultat = a + b;
+        // Peut accéder aux champs d'instance
+        _memoire = resultat;
+        return resultat;
     }
 
-    // Méthode d'instance
-    public bool Retirer(decimal montant)
+    // Autre méthode d'instance
+    public int GetMemoire()
     {
-        if (montant > solde)
-            return false;
-
-        solde -= montant;
-        return true;
-    }
-
-    // Méthode d'instance
-    public decimal ObtenirSolde()
-    {
-        return solde;
+        return _memoire;
     }
 }
-
-// Utilisation
-Compte monCompte = new Compte(1000);
-monCompte.Déposer(500);
-bool succès = monCompte.Retirer(200);
-decimal soldeActuel = monCompte.ObtenirSolde(); // 1300
 ```
 
+Pour utiliser ces méthodes, vous devez d'abord créer une instance de la classe :
 
-Les méthodes d'instance :
-- Sont appelées sur une instance spécifique d'une classe
-- Peuvent accéder aux membres non-statiques de la classe
-- Ne peuvent pas être appelées sans une instance de la classe
-- Ont accès au mot-clé `this` qui fait référence à l'instance actuelle
+```csharp
+// Création d'une instance
+Calculatrice calc = new Calculatrice();
+
+// Appel de méthodes sur cette instance
+int somme = calc.Additionner(5, 7);
+Console.WriteLine(somme);  // Affiche : 12
+
+int valeurEnMemoire = calc.GetMemoire();
+Console.WriteLine(valeurEnMemoire);  // Affiche : 12
+```
+
+Si vous créez plusieurs instances, chacune aura son propre état indépendant :
+
+```csharp
+Calculatrice calc1 = new Calculatrice();
+Calculatrice calc2 = new Calculatrice();
+
+calc1.Additionner(10, 20);
+calc2.Additionner(1, 2);
+
+Console.WriteLine(calc1.GetMemoire());  // Affiche : 30
+Console.WriteLine(calc2.GetMemoire());  // Affiche : 3
+```
 
 ### Méthodes statiques
 
-Les méthodes statiques appartiennent à la classe elle-même, et non à une instance spécifique. Elles sont généralement utilisées pour des opérations qui ne nécessitent pas d'état d'instance.
-
-```textmate
-public class CalculateurFinancier
-{
-    // Méthode statique
-    public static decimal CalculerIntérêts(decimal principal, decimal taux, int années)
-    {
-        return principal * taux * années;
-    }
-
-    // Méthode statique
-    public static decimal CalculerMensualité(decimal montantEmprunt, decimal tauxAnnuel, int nombreMois)
-    {
-        decimal tauxMensuel = tauxAnnuel / 12;
-        return montantEmprunt * tauxMensuel * (decimal)Math.Pow((double)(1 + tauxMensuel), nombreMois) /
-               ((decimal)Math.Pow((double)(1 + tauxMensuel), nombreMois) - 1);
-    }
-}
-
-// Utilisation
-decimal intérêts = CalculateurFinancier.CalculerIntérêts(10000, 0.05m, 3);
-decimal mensualité = CalculateurFinancier.CalculerMensualité(200000, 0.03m, 240);
-```
-
-
-Les méthodes statiques :
+Les méthodes statiques appartiennent à la classe elle-même, et non à une instance spécifique. Elles :
+- Sont marquées avec le mot-clé `static`
+- Ne peuvent pas accéder aux membres d'instance (non statiques) directement
+- Peuvent uniquement accéder à d'autres membres statiques de la classe
 - Sont appelées directement sur la classe, sans créer d'instance
-- Ne peuvent pas accéder aux membres non-statiques de la classe
-- Ne peuvent pas utiliser le mot-clé `this`
-- Sont souvent utilisées pour des fonctions utilitaires ou des opérations indépendantes de l'état
-- Sont chargées en mémoire à la première utilisation de la classe
 
-### Classes d'extension
-
-À partir de C# 3.0, il est possible de créer des méthodes d'extension qui ajoutent des fonctionnalités à des types existants sans les modifier directement.
-
-```textmate
-// Classe statique contenant des méthodes d'extension
-public static class StringExtensions
+```csharp
+public class MathUtils
 {
-    // Méthode d'extension pour le type string
-    public static bool EstNullOuVide(this string valeur)
+    // Constante statique
+    public static readonly double PI = 3.14159;
+
+    // Méthode statique
+    public static double CalculerAireCercle(double rayon)
     {
-        return string.IsNullOrEmpty(valeur);
+        // Peut accéder à d'autres membres statiques
+        return PI * rayon * rayon;
     }
 
-    // Méthode d'extension avec paramètres
-    public static string TronquerTexte(this string texte, int longueurMax)
+    // Autre méthode statique
+    public static bool EstNombrePremier(int nombre)
     {
-        if (texte == null) return null;
+        if (nombre <= 1) return false;
+        if (nombre == 2) return true;
 
-        if (texte.Length <= longueurMax)
-            return texte;
+        for (int i = 2; i <= Math.Sqrt(nombre); i++)
+        {
+            if (nombre % i == 0) return false;
+        }
 
-        return texte.Substring(0, longueurMax) + "...";
-    }
-}
-
-// Utilisation
-string message = "Bonjour le monde";
-bool estVide = message.EstNullOuVide(); // false
-string texteTronqué = message.TronquerTexte(7); // "Bonjour..."
-```
-
-
-Les méthodes d'extension :
-- Sont définies dans des classes statiques
-- Doivent être elles-mêmes statiques
-- Utilisent le mot-clé `this` comme premier paramètre pour indiquer le type étendu
-- Sont appelées comme des méthodes d'instance sur le type étendu
-- Sont particulièrement utiles pour ajouter des fonctionnalités à des types que vous ne pouvez pas modifier
-- Sont largement utilisées dans LINQ (Language Integrated Query)
-
-### Choix entre méthodes statiques et d'instance
-
-Le choix entre une méthode statique et une méthode d'instance dépend principalement de :
-
-1. **Dépendance à l'état** : Si la méthode dépend de l'état de l'instance, elle devrait être une méthode d'instance.
-2. **Logique utilitaire** : Si la méthode fournit une fonctionnalité utilitaire indépendante, elle peut être statique.
-3. **Testabilité** : Les méthodes d'instance sont généralement plus faciles à mocker pour les tests unitaires.
-4. **Performance** : Les méthodes statiques peuvent être légèrement plus performantes car elles évitent le lookup d'instance.
-
-### Différences entre .NET Framework 4.7.2 et .NET 8
-
-Les principes fondamentaux des méthodes statiques et d'instance sont identiques entre .NET Framework 4.7.2 et .NET 8. Cependant, .NET 8 introduit quelques améliorations syntaxiques et fonctionnelles :
-
-- Support amélioré pour les méthodes d'extension génériques
-- Performances optimisées pour les appels de méthodes
-- Support des méthodes d'interface statiques (à partir de C# 8.0)
-
-```textmate
-// Exemple de méthode d'interface statique (disponible uniquement dans .NET Core/.NET)
-public interface IConvertissable<T>
-{
-    static abstract T Convertir(string valeur);
-}
-
-public class Entier : IConvertissable<int>
-{
-    public static int Convertir(string valeur)
-    {
-        return int.Parse(valeur);
+        return true;
     }
 }
 ```
 
+Pour appeler ces méthodes statiques, utilisez directement le nom de la classe :
 
-En résumé, la compréhension des méthodes, de leurs signatures, types de retour et nature (statique ou d'instance) constitue une base fondamentale pour structurer efficacement le code en C#. Ces concepts sont applicables dans toutes les versions de C# avec quelques différences syntaxiques entre .NET Framework 4.7.2 et .NET 8 pour les fonctionnalités les plus récentes.
+```csharp
+// Aucune instance n'est nécessaire
+double aire = MathUtils.CalculerAireCercle(5);
+Console.WriteLine(aire);  // Affiche : 78.53975
+
+bool estPremier = MathUtils.EstNombrePremier(17);
+Console.WriteLine(estPremier);  // Affiche : True
+```
+
+### Quand utiliser des méthodes statiques vs d'instance ?
+
+#### Utilisez des méthodes statiques quand :
+- La fonctionnalité ne dépend pas de l'état d'un objet spécifique
+- La méthode effectue une opération utilitaire ou une fonction pure (même entrée = même sortie)
+- Vous souhaitez regrouper des fonctionnalités liées sans créer d'instances
+- La méthode opère sur des paramètres fournis et ne modifie pas l'état de la classe
+
+#### Utilisez des méthodes d'instance quand :
+- L'opération dépend de l'état de l'objet
+- Vous travaillez avec les données d'une instance spécifique
+- Vous avez besoin de maintenir un état entre les appels de méthode
+- Vous suivez le paradigme de la programmation orientée objet
+
+### Exemple complet combinant méthodes statiques et d'instance
+
+```csharp
+public class Personne
+{
+    // Champs d'instance
+    public string Nom { get; private set; }
+    public int Age { get; private set; }
+
+    // Constructeur
+    public Personne(string nom, int age)
+    {
+        Nom = nom;
+        Age = age;
+    }
+
+    // Méthode d'instance
+    public bool EstMajeur()
+    {
+        // Utilise l'état de l'instance (Age)
+        return Age >= 18;
+    }
+
+    // Méthode d'instance
+    public string GetDescription()
+    {
+        string statutMajorite = EstMajeur() ? "majeure" : "mineure";
+        return $"{Nom}, {Age} ans, personne {statutMajorite}";
+    }
+
+    // Méthode statique - ne dépend pas d'une instance
+    public static int CalculerAgeAPartirAnneeNaissance(int anneeNaissance)
+    {
+        int anneeActuelle = DateTime.Now.Year;
+        return anneeActuelle - anneeNaissance;
+    }
+
+    // Méthode statique - factory method
+    public static Personne CreerPersonneAdulte(string nom)
+    {
+        // Crée une nouvelle instance
+        return new Personne(nom, 18);
+    }
+}
+```
+
+Utilisation :
+
+```csharp
+// Utilisation de méthodes d'instance
+Personne alice = new Personne("Alice", 25);
+Console.WriteLine(alice.GetDescription());  // Affiche : "Alice, 25 ans, personne majeure"
+
+// Utilisation de méthodes statiques
+int ageCalcule = Personne.CalculerAgeAPartirAnneeNaissance(1990);
+Console.WriteLine($"Âge calculé : {ageCalcule} ans");
+
+// Utilisation d'une factory method statique
+Personne nouvelAdulte = Personne.CreerPersonneAdulte("Thomas");
+Console.WriteLine(nouvelAdulte.GetDescription());  // Affiche : "Thomas, 18 ans, personne majeure"
+```
+
+### Astuces et bonnes pratiques
+
+1. **Nommez clairement vos méthodes** : Le nom doit refléter ce que fait la méthode (commencez souvent par un verbe)
+2. **Principe de responsabilité unique** : Une méthode ne doit faire qu'une seule chose, mais la faire bien
+3. **Méthodes courtes** : Visez des méthodes courtes (moins de 20-30 lignes) pour améliorer la lisibilité
+4. **Documentation** : Utilisez des commentaires XML `///` pour documenter vos méthodes
+5. **Cohérence** : Gardez un style cohérent pour vos signatures de méthodes dans toute votre application
+
+```csharp
+/// <summary>
+/// Calcule l'âge à partir de la date de naissance.
+/// </summary>
+/// <param name="dateNaissance">La date de naissance</param>
+/// <returns>L'âge en années</returns>
+public static int CalculerAge(DateTime dateNaissance)
+{
+    DateTime aujourdhui = DateTime.Today;
+    int age = aujourdhui.Year - dateNaissance.Year;
+
+    // Ajustement si l'anniversaire n'est pas encore passé cette année
+    if (dateNaissance.Date > aujourdhui.AddYears(-age))
+    {
+        age--;
+    }
+
+    return age;
+}
+```
+
+En maîtrisant la création et l'utilisation des méthodes en C#, vous construirez un code plus organisé, plus maintenable et plus réutilisable.
