--- a/04. Méthodes et fonctions/4.3. Surcharge de méthodes.md
+++ b/04. Méthodes et fonctions/4.3. Surcharge de méthodes.md
@@ -1,499 +1,486 @@
-# 4.3. Surcharge de méthodes
+# 4.3. Surcharge de méthodes en C#
 
-La surcharge de méthodes (*method overloading*) est une fonctionnalité puissante en C# qui permet de définir plusieurs méthodes avec le même nom mais des signatures différentes. Cette technique améliore la lisibilité et l'ergonomie du code en offrant différentes façons d'invoquer une fonctionnalité similaire. Dans cette section, nous explorerons les principes de la surcharge de méthodes, les règles de résolution, et les bonnes pratiques à adopter.
+La surcharge de méthodes est une fonctionnalité puissante qui vous permet de définir plusieurs versions d'une méthode avec le même nom mais des paramètres différents. Dans cette section, nous allons explorer ce concept et apprendre comment l'utiliser efficacement.
 
-## 4.3.1. Règles de résolution de surcharge
+## Qu'est-ce que la surcharge de méthodes ?
 
-La surcharge de méthodes permet au compilateur C# de déterminer quelle version d'une méthode doit être appelée en fonction des arguments fournis. Cette résolution suit des règles précises.
+La surcharge de méthodes (ou _method overloading_ en anglais) permet de créer plusieurs méthodes portant le même nom dans une classe, à condition qu'elles se distinguent par leurs paramètres. C'est une forme de polymorphisme qui rend votre code plus intuitif et plus facile à utiliser.
 
-### Principes fondamentaux
+Exemple simple :
 
-Pour qu'une méthode soit considérée comme une surcharge d'une autre, elle doit :
-
-1. Avoir le même nom
-2. Avoir une signature différente, c'est-à-dire :
-   - Un nombre différent de paramètres, et/ou
-   - Des types de paramètres différents, et/ou
-   - Des modificateurs de paramètres différents (ref, out, params)
-
-Le type de retour seul ne suffit pas à différencier deux surcharges.
-
-### Exemples de base
-
-```textmate
-public class Calculateur
+```csharp
+public class Calculatrice
 {
-    // Surcharge avec différents nombres de paramètres
+    // Première version pour additionner deux entiers
     public int Additionner(int a, int b)
     {
         return a + b;
     }
 
+    // Deuxième version pour additionner trois entiers
     public int Additionner(int a, int b, int c)
     {
         return a + b + c;
     }
 
-    // Surcharge avec différents types de paramètres
+    // Troisième version pour additionner deux doubles
     public double Additionner(double a, double b)
     {
         return a + b;
     }
-
-    public string Additionner(string a, string b)
-    {
-        return a + b; // Concaténation de chaînes
-    }
-
-    // INCORRECT : Ne compile pas - même signature que la première méthode
-    // public double Additionner(int a, int b)
-    // {
-    //     return a + b;
-    // }
 }
 ```
 
+Avec cette classe, vous pouvez appeler la méthode `Additionner` de différentes façons :
 
-### Processus de résolution de surcharge
+```csharp
+Calculatrice calc = new Calculatrice();
 
-Lorsque le compilateur C# rencontre un appel à une méthode surchargée, il suit un processus complexe pour déterminer quelle surcharge utiliser :
+int somme1 = calc.Additionner(5, 7);              // Utilise la première version
+int somme2 = calc.Additionner(5, 7, 9);           // Utilise la deuxième version
+double somme3 = calc.Additionner(5.5, 7.3);       // Utilise la troisième version
+```
 
-1. **Correspondance exacte** : D'abord, il recherche une méthode dont les paramètres correspondent exactement aux types des arguments.
-2. **Conversions implicites** : Si aucune correspondance exacte n'est trouvée, il considère les méthodes dont les paramètres peuvent recevoir les arguments après conversions implicites.
-3. **Meilleure correspondance** : Si plusieurs surcharges sont éligibles, le compilateur choisit la "meilleure correspondance" selon des règles de priorité complexes.
-4. **Ambiguïté** : Si plusieurs surcharges sont éligibles et qu'aucune n'est clairement meilleure, le compilateur génère une erreur d'ambiguïté.
+Le compilateur détermine automatiquement quelle version de la méthode appeler en fonction des arguments fournis.
 
-### Exemples de résolution
+## Avantages de la surcharge de méthodes
 
-```textmate
-public class ExempleResolution
+1. **Meilleure lisibilité** : Utiliser le même nom pour des opérations similaires rend le code plus intuitif
+2. **Simplicité d'utilisation** : Les utilisateurs de votre classe n'ont pas besoin de mémoriser plusieurs noms de méthodes
+3. **Flexibilité** : Permet de traiter différents types ou nombres de paramètres tout en conservant une interface cohérente
+4. **Évolution facile** : Possibilité d'ajouter de nouvelles versions sans casser le code existant
+
+## 4.3.1. Règles de résolution de surcharge
+
+Pour que la surcharge fonctionne correctement, le compilateur doit pouvoir déterminer sans ambiguïté quelle version de la méthode appeler. Voici les règles qui régissent ce processus de résolution.
+
+### Comment le compilateur choisit la bonne méthode
+
+Le compilateur C# applique un ensemble de règles pour déterminer quelle méthode surchargée utiliser :
+
+1. **Correspondance exacte** : Le compilateur recherche d'abord une méthode dont les paramètres correspondent exactement aux types des arguments fournis
+2. **Conversions implicites** : Si aucune correspondance exacte n'est trouvée, le compilateur cherche des méthodes qui peuvent être appelées après des conversions implicites (sans perte de données)
+3. **Conversions explicites** : En dernier recours, le compilateur considère les méthodes qui nécessitent des conversions explicites
+
+### Différences qui permettent la surcharge
+
+Une méthode surchargée doit se différencier des autres par au moins un de ces éléments :
+
+1. **Nombre de paramètres**
+2. **Types des paramètres**
+3. **Ordre des paramètres**
+4. **Modificateurs de paramètres** (`ref`, `out`, ou `in`)
+
+```csharp
+public class Exemple
 {
-    // Exemple 1: Surcharges avec conversions implicites
-    public void Afficher(int valeur)
-    {
-        Console.WriteLine($"Int: {valeur}");
-    }
+    // Différent nombre de paramètres
+    public void Afficher(string message) { /* ... */ }
+    public void Afficher(string message, bool enGras) { /* ... */ }
 
-    public void Afficher(double valeur)
-    {
-        Console.WriteLine($"Double: {valeur}");
-    }
+    // Différents types de paramètres
+    public void Traiter(int nombre) { /* ... */ }
+    public void Traiter(string texte) { /* ... */ }
 
-    public void Afficher(object valeur)
-    {
-        Console.WriteLine($"Object: {valeur}");
-    }
+    // Différent ordre de paramètres
+    public void Configurer(string nom, int valeur) { /* ... */ }
+    public void Configurer(int valeur, string nom) { /* ... */ }
 
-    // Exemple 2: Surcharges avec paramètres optionnels
-    public void Configurer(int id, string nom = null)
-    {
-        Console.WriteLine($"Config1: {id}, {nom ?? "défaut"}");
-    }
-
-    public void Configurer(string nom)
-    {
-        Console.WriteLine($"Config2: {nom}");
-    }
-
-    // Exemple 3: Surcharges avec params
-    public void Traiter(params int[] nombres)
-    {
-        Console.WriteLine($"Traitement de {nombres.Length} nombres");
-    }
-
-    public void Traiter(int premier, params int[] autres)
-    {
-        Console.WriteLine($"Traitement spécial pour {premier} et {autres.Length} autres");
-    }
+    // Différents modificateurs
+    public void Modifier(int valeur) { /* ... */ }
+    public void Modifier(ref int valeur) { /* ... */ }
 }
-
-// Usage et résolution
-var exemple = new ExempleResolution();
-
-// Appel à Afficher
-exemple.Afficher(5);        // Appelle Afficher(int)
-exemple.Afficher(5.0);      // Appelle Afficher(double)
-exemple.Afficher("texte");  // Appelle Afficher(object)
-
-// Appel à Configurer
-exemple.Configurer(1);           // Appelle Configurer(int, string) avec valeur par défaut
-exemple.Configurer("Nom");       // Appelle Configurer(string)
-exemple.Configurer(1, "Nom");    // Appelle Configurer(int, string)
-
-// Appel à Traiter
-exemple.Traiter();               // Appelle Traiter(params int[]) avec tableau vide
-exemple.Traiter(1);              // Appelle Traiter(int, params int[]) avec tableau vide
-exemple.Traiter(1, 2, 3);        // Appelle Traiter(int, params int[]) avec [2,3]
 ```
 
+### Éléments qui ne permettent PAS la surcharge
 
-### Cas complexes et ambiguïtés
+Les éléments suivants ne sont pas considérés par le compilateur pour distinguer les méthodes surchargées :
 
-#### Conversions implicites et priorité
+1. **Type de retour** : Deux méthodes qui diffèrent uniquement par leur type de retour causeront une erreur de compilation
+2. **Noms des paramètres** : Deux méthodes avec les mêmes types de paramètres dans le même ordre mais des noms différents causeront une erreur
+3. **Modificateurs d'accès** (`public`, `private`, etc.)
+4. **Mots-clés optionnels** comme `params`
 
-```textmate
-public class ResolutionComplexe
+```csharp
+public class ExempleIncorrect
 {
-    public void Methode(int x) { Console.WriteLine("int"); }
-    public void Methode(long x) { Console.WriteLine("long"); }
-    public void Methode(double x) { Console.WriteLine("double"); }
+    // ERREUR : Diffère uniquement par le type de retour
+    public int Calculer(int a, int b) { return a + b; }
+    public double Calculer(int a, int b) { return a + b; } // Ne compilera pas
 
-    public void Tester()
-    {
-        short s = 5;
-        Methode(s);      // Appelle Methode(int) - conversion implicite de short à int est préférée
-        Methode(10.5f);  // Appelle Methode(double) - conversion implicite de float à double est préférée
-    }
+    // ERREUR : Diffère uniquement par les noms des paramètres
+    public void Configurer(int largeur, int hauteur) { /* ... */ }
+    public void Configurer(int longueur, int epaisseur) { /* ... */ } // Ne compilera pas
 }
 ```
 
+### Résolution d'ambiguïté
 
-#### Ambiguïtés et résolution
+Parfois, plusieurs surcharges peuvent sembler appropriées pour un appel donné. Dans ce cas, le compilateur choisit la "meilleure correspondance" selon des règles de priorité complexes.
 
-```textmate
-public class ExempleAmbiguité
+Exemple d'ambiguïté :
+
+```csharp
+public class ExempleAmbiguite
 {
-    // Ces méthodes ne sont pas ambiguës car les paramètres sont différents
-    public void Traiter(int a, double b) { }
-    public void Traiter(double a, int b) { }
-
-    public void Tester()
-    {
-        Traiter(1, 2);       // Ambigu! Les deux méthodes peuvent accepter ces arguments
-                            // mais nécessitent des conversions différentes
-                            // Erreur de compilation
-
-        // Solutions: forcer le type ou utiliser des casts explicites
-        Traiter(1, 2.0);     // Appelle Traiter(int, double)
-        Traiter(1.0, 2);     // Appelle Traiter(double, int)
-        Traiter(1, (double)2); // Appelle Traiter(int, double) avec cast explicite
-    }
+    public void Afficher(long nombre) { Console.WriteLine($"Version long: {nombre}"); }
+    public void Afficher(double nombre) { Console.WriteLine($"Version double: {nombre}"); }
 }
+
+// Utilisation
+ExempleAmbiguite ex = new ExempleAmbiguite();
+ex.Afficher(5); // Quel méthode sera appelée ?
 ```
 
+Dans cet exemple, un `int` (5) peut être converti implicitement en `long` ou en `double`. Le compilateur choisira la conversion vers `long` car c'est la conversion "la plus proche" (de int vers long) selon les règles de conversion numérique.
 
-### Différences entre .NET Framework 4.7.2 et .NET 8
+### Cas spécial : paramètres optionnels vs surcharge
 
-Les règles de base de la surcharge de méthodes sont identiques entre .NET Framework 4.7.2 et .NET 8. Cependant, quelques fonctionnalités plus récentes peuvent affecter la surcharge :
+Les paramètres optionnels peuvent parfois créer des situations d'ambiguïté avec les surcharges :
 
-#### Paramètres par défaut et surcharge (.NET Framework 4.7.2 et .NET 8)
-
-```textmate
-public class ParamètresDéfaut
+```csharp
+public class ParamsVsSurcharge
 {
-    // Ces méthodes peuvent créer des ambiguïtés
-    public void Méthode(int a = 0) { }
-    public void Méthode() { } // Ambiguïté potentielle avec l'appel Méthode()
+    public void Exemple(int a) { Console.WriteLine($"Version 1: {a}"); }
+    public void Exemple(int a, int b = 10) { Console.WriteLine($"Version 2: {a}, {b}"); }
 }
+
+// Utilisation
+ParamsVsSurcharge obj = new ParamsVsSurcharge();
+obj.Exemple(5); // Quelle méthode sera appelée ?
 ```
 
+Dans ce cas, la première méthode sera appelée car elle correspond exactement à l'appel sans avoir besoin de paramètres optionnels.
 
-#### Tuples nommés (.NET 8 et .NET Framework 4.7.2 avec System.ValueTuple)
+### Résolution et méthodes génériques
 
-```textmate
-public class SurchargeAvecTuples
+Les règles deviennent encore plus complexes avec les méthodes génériques :
+
+```csharp
+public class GeneriqueVsNonGenerique
 {
-    // Ces méthodes sont considérées comme différentes
-    public void Traiter((int X, int Y) point) { }
-    public void Traiter((int Lon, int Lat) coordonnées) { }
-
-    // Les noms des éléments des tuples ne font pas partie de la signature
-    // Ceci ne compilera pas (même signature)
-    // public void Traiter((int A, int B) autre) { }
+    public void Traiter<T>(T item) { Console.WriteLine("Version générique"); }
+    public void Traiter(int item) { Console.WriteLine("Version int spécifique"); }
+    public void Traiter(string item) { Console.WriteLine("Version string spécifique"); }
 }
+
+// Utilisation
+GeneriqueVsNonGenerique obj = new GeneriqueVsNonGenerique();
+obj.Traiter(5);          // Appelle la version int spécifique
+obj.Traiter("test");     // Appelle la version string spécifique
+obj.Traiter(new object()); // Appelle la version générique (seule option possible)
 ```
 
-
-#### In, ref, et out (.NET Framework 4.7.2 et .NET 8)
-
-Les modificateurs `ref`, `out` et `in` font partie de la signature et permettent de différencier les surcharges :
-
-```textmate
-public class ModificateursParamètres
-{
-    public void Modifier(int a) { }
-    public void Modifier(ref int a) { }    // Surcharge valide
-    public void Modifier(out int a) { a = 0; } // Surcharge valide
-    public void Modifier(in int a) { }     // Surcharge valide (C# 7.2+)
-
-    public void Test()
-    {
-        int x = 5;
-        Modifier(x);       // Appelle Modifier(int)
-        Modifier(ref x);   // Appelle Modifier(ref int)
-        Modifier(out int y); // Appelle Modifier(out int)
-        Modifier(in x);    // Appelle Modifier(in int)
-    }
-}
-```
-
+Le compilateur préfère les méthodes non génériques aux méthodes génériques lorsque les deux peuvent s'appliquer.
 
 ## 4.3.2. Bonnes pratiques
 
-La surcharge de méthodes, bien qu'utile, peut créer des confusions si elle est mal utilisée. Voici des bonnes pratiques à suivre.
+Pour tirer le meilleur parti de la surcharge de méthodes tout en évitant les pièges courants, voici quelques bonnes pratiques à suivre.
 
-### 1. Maintenir une cohérence sémantique
+### Quand utiliser la surcharge
 
-Les surcharges doivent représenter la même opération conceptuelle, appliquée à différents types ou avec différentes options.
+1. **Pour des opérations conceptuellement identiques** qui diffèrent par les types ou le nombre de paramètres
 
-```textmate
-// BIEN : Toutes les surcharges réalisent la même opération conceptuelle
-public class BonneConception
+```csharp
+// Bon exemple : même opération, différents types d'entrée
+public string Formater(DateTime date) { return date.ToString("yyyy-MM-dd"); }
+public string Formater(TimeSpan duree) { return duree.ToString(@"hh\:mm\:ss"); }
+```
+
+2. **Pour proposer des versions simplifiées** d'une méthode avec des valeurs par défaut (alternative aux paramètres optionnels)
+
+```csharp
+// Version complète
+public void ConfigurerConnexion(string serveur, int port, bool ssl, int timeout, bool retry)
 {
-    public int Additionner(int a, int b) => a + b;
-    public double Additionner(double a, double b) => a + b;
-    public decimal Additionner(decimal a, decimal b) => a + b;
+    // Implémentation complète
 }
 
-// MAUVAIS : Les surcharges font des opérations conceptuellement différentes
-public class MauvaiseConception
+// Versions simplifiées
+public void ConfigurerConnexion(string serveur, int port)
 {
-    public int Calculer(int a, int b) => a + b;  // Addition
-    public int Calculer(int a) => a * a;        // Carré
-    public double Calculer(double a, double b, double c) => a * b / c;  // Opération complexe
+    // Utilise des valeurs par défaut pour les autres paramètres
+    ConfigurerConnexion(serveur, port, true, 30, true);
+}
+
+public void ConfigurerConnexion(string serveur)
+{
+    // Port par défaut
+    ConfigurerConnexion(serveur, 8080);
 }
 ```
 
+3. **Pour des conversions de types** ou des adaptations d'API
 
-### 2. Limiter le nombre de surcharges
+```csharp
+public void EnregistrerDonnee(int valeur) { /* ... */ }
+public void EnregistrerDonnee(string valeur) { EnregistrerDonnee(int.Parse(valeur)); }
+```
 
-Trop de surcharges peut rendre l'API difficile à comprendre et à utiliser.
+### Pièges à éviter
 
-```textmate
-// BIEN : Nombre limité de surcharges avec des différences claires
-public class BonnePratique
-{
-    public void Enregistrer(string message) { /* Enregistre avec paramètres par défaut */ }
-    public void Enregistrer(string message, LogLevel niveau) { /* Enregistre avec niveau spécifié */ }
-    public void Enregistrer(string message, LogLevel niveau, string catégorie) { /* Avec catégorie */ }
+1. **Évitez de créer des surcharges avec des comportements différents**
+
+```csharp
+// MAUVAIS EXEMPLE : comportements différents
+public void Traiter(int id) {
+    // Récupère des données d'une base de données
 }
 
-// MAUVAIS : Trop de surcharges avec des différences subtiles
-public class MauvaisePratique
-{
-    public void Enregistrer(string message) { }
-    public void Enregistrer(string message, LogLevel niveau) { }
-    public void Enregistrer(string message, string catégorie) { }
-    public void Enregistrer(LogLevel niveau, string message) { }
-    public void Enregistrer(string message, bool inclureHorodatage) { }
-    public void Enregistrer(string message, LogLevel niveau, string catégorie) { }
-    public void Enregistrer(string message, string catégorie, LogLevel niveau) { } // Ordre différent!
-    // ... etc.
+public void Traiter(string nom) {
+    // Envoie un email
+    // Ce comportement est complètement différent et prête à confusion
 }
 ```
 
+2. **Attention aux surcharges qui diffèrent uniquement par des types proches**
 
-### 3. Préférer les paramètres optionnels pour les cas simples
+```csharp
+// RISQUÉ : facilement confondable
+public void Calculer(int valeur) { /* ... */ }
+public void Calculer(long valeur) { /* ... */ }
+public void Calculer(float valeur) { /* ... */ }
+```
 
-Les paramètres optionnels peuvent souvent remplacer plusieurs surcharges et rendre le code plus maintenable.
+3. **Évitez les surcharges qui diffèrent uniquement par des types référence/valeur de même nom**
 
-```textmate
-// BIEN : Utilisation de paramètres optionnels
-public class AvecParamètresOptionnels
+```csharp
+// PROBLÉMATIQUE : Confusion avec Nullable<T>
+public void Traiter(int valeur) { /* ... */ }
+public void Traiter(int? valeur) { /* ... */ }
+```
+
+4. **Attention aux surcharges qui diffèrent seulement par les modificateurs `ref`/`out`**
+
+```csharp
+// CONFUS : facilement source d'erreurs
+public bool TryParse(string input, out int resultat) { /* ... */ }
+public int TryParse(string input, ref int resultat) { /* ... */ }
+```
+
+### Principes pour des surcharges efficaces
+
+1. **Cohérence sémantique** : Toutes les surcharges doivent réaliser conceptuellement la même opération
+
+```csharp
+// BIEN : même concept, différentes implémentations
+public class DessinateurForme
 {
-    public void Configurer(string nom, int priorité = 0, bool estActif = true)
-    {
-        // Implémentation
-    }
-}
-
-// ÉQUIVALENT AVEC SURCHARGES (plus verbeux)
-public class AvecSurcharges
-{
-    public void Configurer(string nom)
-    {
-        Configurer(nom, 0, true);
-    }
-
-    public void Configurer(string nom, int priorité)
-    {
-        Configurer(nom, priorité, true);
-    }
-
-    public void Configurer(string nom, int priorité, bool estActif)
-    {
-        // Implémentation
-    }
+    public void Dessiner(Cercle cercle) { /* Dessine un cercle */ }
+    public void Dessiner(Rectangle rectangle) { /* Dessine un rectangle */ }
+    public void Dessiner(Triangle triangle) { /* Dessine un triangle */ }
 }
 ```
 
+2. **Délégation à une implémentation principale** : Réduisez la duplication en faisant appel à une version "maître"
 
-### 4. Éviter les surcharges qui diffèrent uniquement par des types numériques
-
-Les conversions implicites entre types numériques peuvent créer des ambiguïtés ou des comportements inattendus.
-
-```textmate
-// PROBLÉMATIQUE : Surcharges avec différents types numériques
-public class TypesNumériques
+```csharp
+public class GestionnaireEmail
 {
-    public void Traiter(int valeur) { Console.WriteLine("int"); }
-    public void Traiter(long valeur) { Console.WriteLine("long"); }
-    public void Traiter(float valeur) { Console.WriteLine("float"); }
-
-    public void Test()
-    {
-        int i = 5;
-        Traiter(i);      // OK: Appelle Traiter(int)
-
-        var x = 5;       // Type inféré: int
-        Traiter(x);      // OK: Appelle Traiter(int)
-
-        Traiter(5);      // OK: Appelle Traiter(int)
-        Traiter(5L);     // OK: Appelle Traiter(long)
-        Traiter(5.0f);   // OK: Appelle Traiter(float)
-
-        // Mais attention aux cas ambigus avec des expressions plus complexes
-    }
-}
-```
-
-
-### 5. Documenter clairement les différences entre surcharges
-
-Une bonne documentation aide les utilisateurs à comprendre quelle surcharge utiliser selon leurs besoins.
-
-```textmate
-/// <summary>
-/// Charge les données depuis une source.
-/// </summary>
-/// <param name="chemin">Chemin du fichier à charger.</param>
-/// <returns>Les données chargées.</returns>
-public Data Charger(string chemin)
-{
-    // Implémentation
-}
-
-/// <summary>
-/// Charge les données depuis une source avec des options spécifiques.
-/// </summary>
-/// <param name="chemin">Chemin du fichier à charger.</param>
-/// <param name="options">Options de chargement personnalisées.</param>
-/// <returns>Les données chargées selon les options spécifiées.</returns>
-public Data Charger(string chemin, LoadOptions options)
-{
-    // Implémentation
-}
-```
-
-
-### 6. Utiliser des noms descriptifs plutôt que des surcharges dans certains cas
-
-Parfois, des méthodes distinctes avec des noms plus explicites sont préférables à des surcharges.
-
-```textmate
-// BIEN : Noms spécifiques pour des comportements différents
-public class BonneClartéAPI
-{
-    public Customer TrouverClientParId(int id) { /* ... */ }
-    public Customer TrouverClientParEmail(string email) { /* ... */ }
-    public List<Customer> RechercherClientsParNom(string nomPartiel) { /* ... */ }
-}
-
-// MOINS CLAIR : Utilisation de surcharges pour des comportements différents
-public class MoinsClaire
-{
-    public Customer TrouverClient(int id) { /* ... */ }
-    public Customer TrouverClient(string email) { /* ... */ }
-    public List<Customer> TrouverClient(string nomPartiel, bool recherchePartielle) { /* ... */ }
-}
-```
-
-
-### 7. Attention aux méthodes qui acceptent null
-
-Les surcharges qui diffèrent par des types référence peuvent causer des confusions avec la valeur null.
-
-```textmate
-public class GestionNull
-{
-    public void Traiter(string texte)
-    {
-        Console.WriteLine("Traiter(string)");
-    }
-
-    public void Traiter(object obj)
-    {
-        Console.WriteLine("Traiter(object)");
-    }
-
-    public void Test()
-    {
-        Traiter("texte");    // Appelle Traiter(string)
-        Traiter(new object()); // Appelle Traiter(object)
-        Traiter(null);       // Ambigu? En réalité, appelle Traiter(string) car c'est plus spécifique
-
-        // Pour forcer l'appel à Traiter(object) avec null
-        Traiter((object)null);
-    }
-}
-```
-
-
-### 8. Cohérence entre les versions .NET Framework 4.7.2 et .NET 8
-
-Lorsque vous travaillez avec les deux versions du framework, assurez-vous que vos surcharges se comportent de manière cohérente.
-
-```textmate
-public class CompatibilitéVersions
-{
-    // Fonctionnalité de base compatible avec les deux versions
-    public void Traiter(string donnée) { /* Implémentation de base */ }
-
-    // Surcharge utilisant des fonctionnalités plus récentes
-    public void Traiter(string donnée, CancellationToken token)
-    {
-        #if NETCOREAPP || NET5_0_OR_GREATER
-        // Code spécifique à .NET Core/.NET 5+
-        #else
-        // Code pour .NET Framework
-        #endif
-    }
-}
-```
-
-
-### 9. Considérations pour les APIs publiques
-
-Pour les APIs destinées à être utilisées par d'autres développeurs, quelques principes supplémentaires s'appliquent :
-
-- **Stabilité** : Une fois publiées, les surcharges ne devraient pas être modifiées de manière incompatible
-- **Extensibilité** : Considérez comment les futures surcharges pourraient être ajoutées sans créer d'ambiguïtés
-- **Testabilité** : Assurez-vous que chaque surcharge est testable indépendamment
-
-```textmate
-// API publique bien conçue
-public class BonneAPIPublique
-{
-    // Version 1.0 - API initiale
-    public Task<Result> TraiterAsync(RequestData request)
-    {
-        // Implémentation par défaut
-        return TraiterAsync(request, CancellationToken.None);
-    }
-
-    // Version 1.0 - Surcharge principale avec toutes les options
-    public Task<Result> TraiterAsync(RequestData request, CancellationToken cancellationToken)
+    // Implémentation principale
+    public bool EnvoyerEmail(string destinataire, string sujet, string corps,
+                           bool html, List<string> pieces_jointes, int priorite)
     {
         // Implémentation complète
+        return true;
     }
 
-    // Version 2.0 - Nouvelle surcharge avec options supplémentaires
-    // Ajout sans casser les appels existants
-    public Task<Result> TraiterAsync(RequestData request, ProcessingOptions options, CancellationToken cancellationToken = default)
+    // Surcharges qui délèguent à la version principale
+    public bool EnvoyerEmail(string destinataire, string sujet, string corps)
     {
-        // Nouvelle implémentation
+        return EnvoyerEmail(destinataire, sujet, corps, false, new List<string>(), 1);
+    }
+
+    public bool EnvoyerEmail(string destinataire, string sujet, string corps, bool html)
+    {
+        return EnvoyerEmail(destinataire, sujet, corps, html, new List<string>(), 1);
     }
 }
 ```
 
+3. **Documentation claire** des différences entre les surcharges
 
-## Résumé
+```csharp
+/// <summary>
+/// Convertit une chaîne en entier.
+/// </summary>
+/// <param name="texte">La chaîne à convertir</param>
+/// <returns>La valeur entière</returns>
+/// <exception cref="FormatException">Si la chaîne n'est pas un nombre valide</exception>
+public int Convertir(string texte)
+{
+    return int.Parse(texte);
+}
 
-La surcharge de méthodes est une fonctionnalité puissante qui améliore la lisibilité et l'ergonomie des APIs C#, tant en .NET Framework 4.7.2 qu'en .NET 8. Les principes clés à retenir sont :
+/// <summary>
+/// Tente de convertir une chaîne en entier sans générer d'exception.
+/// </summary>
+/// <param name="texte">La chaîne à convertir</param>
+/// <param name="defaut">La valeur à retourner en cas d'échec</param>
+/// <returns>La valeur entière ou la valeur par défaut si la conversion échoue</returns>
+public int Convertir(string texte, int defaut)
+{
+    if (int.TryParse(texte, out int resultat))
+        return resultat;
+    return defaut;
+}
+```
 
-1. Les surcharges doivent partager le même nom mais avoir des signatures différentes.
-2. Le compilateur sélectionne la surcharge la plus appropriée selon des règles de résolution complexes.
-3. Les bonnes pratiques incluent la cohérence sémantique, la limitation du nombre de surcharges, et la documentation claire.
-4. Dans certains cas, les paramètres optionnels ou des noms de méthodes distincts sont préférables aux surcharges.
+4. **Utiliser les paramètres optionnels** comme alternative aux nombreuses surcharges
 
-En suivant ces principes, vous créerez des APIs intuitives, maintenables et correctement utilisées par d'autres développeurs, quelle que soit la version de .NET utilisée.
+```csharp
+// Au lieu de nombreuses surcharges...
+public void Configurer(string nom) { /* ... */ }
+public void Configurer(string nom, int timeout) { /* ... */ }
+public void Configurer(string nom, int timeout, bool ssl) { /* ... */ }
+
+// Considérez plutôt :
+public void Configurer(string nom, int timeout = 30, bool ssl = true)
+{
+    // Une seule implémentation
+}
+```
+
+### Quand privilégier d'autres approches
+
+Dans certains cas, d'autres approches peuvent être plus appropriées que la surcharge de méthodes :
+
+1. **Méthodes avec des noms différents** pour des opérations nettement différentes
+
+```csharp
+// Plutôt que :
+public void Traiter(Client client) { /* ... */ }
+public void Traiter(Facture facture) { /* ... */ }
+
+// Préférez :
+public void TraiterClient(Client client) { /* ... */ }
+public void TraiterFacture(Facture facture) { /* ... */ }
+```
+
+2. **Classes génériques** au lieu de nombreuses surcharges pour des types différents
+
+```csharp
+// Plutôt que :
+public void Stocker(int valeur) { /* ... */ }
+public void Stocker(string valeur) { /* ... */ }
+public void Stocker(DateTime valeur) { /* ... */ }
+// Et ainsi de suite pour chaque type...
+
+// Préférez :
+public void Stocker<T>(T valeur) { /* ... */ }
+```
+
+3. **Paramètres optionnels** ou **paramètres nommés** pour simplifier les API avec de nombreux paramètres
+
+```csharp
+// Plutôt que de nombreuses surcharges avec des combinaisons de paramètres
+public void Configure(
+    string nom,
+    string description = "",
+    bool actif = true,
+    int timeout = 30,
+    LogLevel niveau = LogLevel.Info)
+{
+    // Une seule implémentation
+}
+
+// Utilisation avec paramètres nommés
+service.Configure(
+    nom: "MonService",
+    niveau: LogLevel.Debug,
+    timeout: 60
+);
+```
+
+## Exemple complet : Utilisation efficace de la surcharge
+
+Voici un exemple complet montrant comment utiliser efficacement la surcharge de méthodes dans une classe utilitaire pour le traitement de fichiers :
+
+```csharp
+public class GestionnaireFichiers
+{
+    // Version principale qui fait le travail réel
+    public string LireFichier(string chemin, Encoding encodage, bool ignoreCommentaires,
+                            char commentaireChar, bool trim)
+    {
+        // Vérifications
+        if (string.IsNullOrEmpty(chemin))
+            throw new ArgumentException("Le chemin ne peut pas être vide", nameof(chemin));
+
+        if (!File.Exists(chemin))
+            throw new FileNotFoundException("Fichier introuvable", chemin);
+
+        // Lecture du fichier
+        string contenu = File.ReadAllText(chemin, encodage);
+
+        // Traitement selon les options
+        if (ignoreCommentaires)
+        {
+            var lignes = contenu.Split('\n')
+                .Where(ligne => !ligne.TrimStart().StartsWith(commentaireChar.ToString()))
+                .ToArray();
+            contenu = string.Join("\n", lignes);
+        }
+
+        if (trim)
+        {
+            contenu = contenu.Trim();
+        }
+
+        return contenu;
+    }
+
+    // Surcharge simplifiée - encodage par défaut
+    public string LireFichier(string chemin)
+    {
+        return LireFichier(chemin, Encoding.UTF8, false, '#', true);
+    }
+
+    // Surcharge avec encodage personnalisé
+    public string LireFichier(string chemin, Encoding encodage)
+    {
+        return LireFichier(chemin, encodage, false, '#', true);
+    }
+
+    // Surcharge pour ignorer les commentaires
+    public string LireFichier(string chemin, bool ignoreCommentaires, char commentaireChar = '#')
+    {
+        return LireFichier(chemin, Encoding.UTF8, ignoreCommentaires, commentaireChar, true);
+    }
+
+    // Méthode pour écrire dans un fichier - complètement différente sémantiquement
+    // donc utilise un nom différent plutôt qu'une surcharge
+    public void EcrireFichier(string chemin, string contenu, Encoding encodage = null)
+    {
+        encodage = encodage ?? Encoding.UTF8;
+        File.WriteAllText(chemin, contenu, encodage);
+    }
+}
+```
+
+Utilisation :
+
+```csharp
+var gestionnaire = new GestionnaireFichiers();
+
+// Utilisation des différentes surcharges
+string contenu1 = gestionnaire.LireFichier("config.txt");
+string contenu2 = gestionnaire.LireFichier("data.csv", Encoding.GetEncoding("ISO-8859-1"));
+string contenu3 = gestionnaire.LireFichier("script.py", true, '#');
+
+// Écriture - méthode différente, pas une surcharge
+gestionnaire.EcrireFichier("output.txt", "Contenu à écrire");
+```
+
+## Conclusion
+
+La surcharge de méthodes est un outil puissant en C# qui vous permet de créer des API intuitives et flexibles. En suivant les règles de résolution et les bonnes pratiques présentées dans cette section, vous pourrez utiliser efficacement cette fonctionnalité tout en évitant les pièges courants.
+
+Points clés à retenir :
+- Les méthodes surchargées doivent avoir le même nom mais des paramètres différents
+- Le compilateur choisit la meilleure correspondance selon des règles précises
+- Utilisez la surcharge pour des opérations conceptuellement identiques
+- Déléguez à une implémentation principale pour réduire la duplication
+- Dans certains cas, envisagez d'autres approches comme les paramètres optionnels ou les génériques
+
+En maîtrisant la surcharge de méthodes, vous améliorerez la qualité et l'utilisabilité de votre code C#.
