--- a/05. Programmation orientée objet en C#/5.1. Classes et objets.md
+++ b/05. Programmation orientée objet en C#/5.1. Classes et objets.md
@@ -9,7 +9,7 @@ Une classe en C# est un modèle qui définit les caractéristiques et les compor
 
 ### Définition d'une classe
 
-```textmate
+```csharp
 // Structure de base d'une classe
 public class Client
 {
@@ -49,7 +49,7 @@ public class Client
 
 Les classes et leurs membres peuvent avoir différents niveaux de visibilité :
 
-```textmate
+```csharp
 // Modificateurs d'accès pour les classes
 public class ClassePublique { } // Accessible partout
 internal class ClasseInterne { } // Accessible uniquement dans l'assembly
@@ -74,7 +74,7 @@ public class Exemple
 
 Pour créer une instance d'une classe, on utilise l'opérateur `new` :
 
-```textmate
+```csharp
 // Instanciation avec constructeur par défaut
 Client client1 = new Client();
 client1.Id = 1;
@@ -96,7 +96,7 @@ Client client4 = new(); // Utilise le constructeur par défaut
 
 Les interfaces fluides permettent d'enchaîner les appels de méthodes, ce qui peut rendre le code plus lisible :
 
-```textmate
+```csharp
 public class ConstructeurEmail
 {
     private string destinataire;
@@ -142,7 +142,7 @@ new ConstructeurEmail()
 
 Les destructeurs (aussi appelés finaliseurs) sont utilisés pour libérer des ressources non gérées :
 
-```textmate
+```csharp
 public class RessourceExterne
 {
     private IntPtr handle; // Pointeur vers une ressource non gérée
@@ -187,7 +187,7 @@ Les membres d'une classe sont les éléments qui définissent la structure et le
 
 Les champs sont des variables déclarées au niveau de la classe :
 
-```textmate
+```csharp
 public class Compte
 {
     // Champs
@@ -215,7 +215,7 @@ decimal taux = Compte.TAUX_INTERET;
 
 Les propriétés encapsulent des champs en fournissant des accesseurs get et set :
 
-```textmate
+```csharp
 public class Employé
 {
     // Champ privé sous-jacent
@@ -278,7 +278,7 @@ public class Employé
 
 Les méthodes définissent les comportements de la classe :
 
-```textmate
+```csharp
 public class Calculatrice
 {
     // Méthode simple
@@ -356,7 +356,7 @@ public class Calculatrice
 
 Les indexeurs permettent d'accéder aux éléments d'une classe comme s'il s'agissait d'un tableau :
 
-```textmate
+```csharp
 public class MaCollection
 {
     private readonly string[] données = new string[10];
@@ -401,7 +401,7 @@ Console.WriteLine(collection["Valeur1"]);  // Recherche par valeur
 
 Vous pouvez surcharger les opérateurs pour vos classes :
 
-```textmate
+```csharp
 public struct Monnaie
 {
     public decimal Montant { get; }
@@ -474,7 +474,7 @@ double valeur = (double)euros2;  // Conversion explicite: 20.0
 
 Les événements permettent à une classe de notifier d'autres classes quand quelque chose se produit :
 
-```textmate
+```csharp
 public class StockItem
 {
     private int quantité;
@@ -520,7 +520,7 @@ produit.Quantité = 10;  // Déclenche l'événement
 
 Pour les événements plus complexes, vous pouvez créer une classe personnalisée dérivée de `EventArgs` :
 
-```textmate
+```csharp
 // Classe pour les données d'événement personnalisées
 public class StockChangedEventArgs : EventArgs
 {
@@ -588,7 +588,7 @@ Les membres statiques appartiennent à la classe elle-même plutôt qu'à une in
 
 ### Champs statiques
 
-```textmate
+```csharp
 public class Compteur
 {
     // Champ statique - partagé par toutes les instances
@@ -624,7 +624,7 @@ Console.WriteLine(Compteur.NombreInstances);  // 3 (accès via la classe)
 
 ### Méthodes statiques
 
-```textmate
+```csharp
 public class MathUtils
 {
     // Méthode statique
@@ -650,7 +650,7 @@ double aire = utils.CalculerAire(5, 3);  // Nécessite une instance (15)
 
 ### Constructeurs statiques
 
-```textmate
+```csharp
 public class Configuration
 {
     // Champs statiques
@@ -684,7 +684,7 @@ Console.WriteLine(Configuration.ObtenirInfoVersion());
 
 ### Classes statiques
 
-```textmate
+```csharp
 // Classe statique - ne peut contenir que des membres statiques
 // et ne peut pas être instanciée
 public static class Utilitaires
@@ -715,7 +715,7 @@ bool emailValide = Utilitaires.EstEmailValide("utilisateur@domaine.com");
 
 Les méthodes d'extension permettent d'ajouter des méthodes à des types existants sans modifier leur code source :
 
-```textmate
+```csharp
 // Les méthodes d'extension sont définies dans des classes statiques
 public static class StringExtensions
 {
@@ -759,7 +759,7 @@ string résumé = description.TronquerA(20);  // "Ceci est une longue..."
 
 ### Classes génériques statiques
 
-```textmate
+```csharp
 // Classe générique statique
 public static class Cache<T>
 {
@@ -826,7 +826,7 @@ C# offre plusieurs façons d'initialiser des objets, allant des constructeurs tr
 
 Les constructeurs sont des méthodes spéciales qui sont appelées lors de la création d'un objet :
 
-```textmate
+```csharp
 public class Personne
 {
     public string Nom { get; set; }
@@ -864,7 +864,7 @@ var p3 = new Personne("Bob");        // Nom = "Bob", Age = 0
 
 Les initialiseurs d'objets permettent d'initialiser un objet sans appeler explicitement des constructeurs avec paramètres :
 
-```textmate
+```csharp
 public class Produit
 {
     // Propriétés
@@ -937,7 +937,7 @@ var client = new Client(1001)  // Appel du constructeur
 
 Les initialiseurs de collection permettent d'initialiser des collections en une seule expression :
 
-```textmate
+```csharp
 // Initialisation de tableau
 int[] nombres = { 1, 2, 3, 4, 5 };
 
@@ -967,7 +967,7 @@ HashSet<char> voyelles = new HashSet<char> { 'a', 'e', 'i', 'o', 'u' };
 
 ### Propriétés en lecture seule avec initialisation
 
-```textmate
+```csharp
 public class Document
 {
     // Propriété en lecture seule avec initialisation
@@ -1007,7 +1007,7 @@ Console.WriteLine(doc.EstExpirée);    // false (par défaut)
 
 Les propriétés init-only sont en lecture seule après l'initialisation, mais peuvent être définies lors de la création de l'objet :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 5+ et .NET 8, pas dans .NET Framework 4.7.2
 public class ImmutablePerson
 {
@@ -1039,7 +1039,7 @@ var personne = new ImmutablePerson
 
 Les propriétés marquées comme `required` doivent être initialisées lors de la création de l'objet :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 7+ et .NET 8, pas dans .NET Framework 4.7.2
 public class Configuration
 {
@@ -1069,7 +1069,7 @@ var config = new Configuration
 
 Dans les versions récentes de C#, le pattern matching peut être utilisé avec des expressions d'objet :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 5+ et .NET 8, pas dans .NET Framework 4.7.2
 public bool EstÉligiblePourRéduction(Client client)
 {
@@ -1088,7 +1088,7 @@ public bool ValiderAdresse(Adresse adresse) =>
 
 Les records sont un type de référence qui facilite la création de classes immuables :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 5+ et .NET 8, pas dans .NET Framework 4.7.2
 // Définition d'un record avec des propriétés init-only
 public record PersonneRecord
@@ -1116,7 +1116,7 @@ var employéPromu = employé with { Poste = "Chef de projet", Salaire = 65000m }
 
 L'opérateur `with` permet de créer une copie d'un objet avec certaines propriétés modifiées :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 5+ et .NET 8, pas dans .NET Framework 4.7.2
 // Définition d'un record
 public record Configuration(string Environnement, string ApiUrl, int Timeout);
@@ -1135,7 +1135,7 @@ Console.WriteLine(configTest);        // Configuration { Environnement = Test, A
 
 Les structs (types de valeur) peuvent être initialisés de manière similaire aux classes :
 
-```textmate
+```csharp
 public struct Point
 {
     public double X { get; set; }
@@ -1167,7 +1167,7 @@ Console.WriteLine(p2.DistanceDeLOrigine());  // 13
 
 ### Utilisation du constructeur dans l'assignation
 
-```textmate
+```csharp
 public class Journal
 {
     private readonly List<string> _entrées = new List<string>();
@@ -1199,7 +1199,7 @@ journal.AfficherJournal();
 
 ### Initialisation avancée avec les délégués et les événements
 
-```textmate
+```csharp
 public class Logger
 {
     // Événement pour notifier des nouveaux logs
@@ -1241,7 +1241,7 @@ logger.Log("Application démarrée");
 
 1. **Utilisez des constructeurs explicites** pour les objets qui nécessitent une initialisation complexe ou qui ont des dépendances obligatoires.
 
-```textmate
+```csharp
 public class DbService
 {
     private readonly DbConnection _connection;
@@ -1259,7 +1259,7 @@ public class DbService
 
 2. **Utilisez des initialiseurs d'objets** pour une initialisation simple et fluide.
 
-```textmate
+```csharp
 var utilisateur = new Utilisateur
 {
     Nom = "Dupont",
@@ -1271,7 +1271,7 @@ var utilisateur = new Utilisateur
 
 3. **Validez les données d'initialisation** pour assurer l'intégrité des objets.
 
-```textmate
+```csharp
 public class Produit
 {
     private string _référence;
@@ -1292,7 +1292,7 @@ public class Produit
 
 4. **Utilisez des propriétés en lecture seule ou init-only** pour les objets qui ne devraient pas changer après l'initialisation.
 
-```textmate
+```csharp
 // .NET Framework 4.7.2
 public class Commande
 {
@@ -1317,7 +1317,7 @@ public class Commande
 
 5. **Considérez les fabriques (factory methods)** pour des scénarios d'initialisation complexes.
 
-```textmate
+```csharp
 public class Client
 {
     public Guid Id { get; }
@@ -1367,7 +1367,7 @@ public class Client
 
 6. **Utilisez les records** dans .NET 8 pour les objets immuables orientés données.
 
-```textmate
+```csharp
 // .NET 8 uniquement
 public record InfoClient(Guid Id, string Nom, string Email);
 
