--- a/05. Programmation orientée objet en C#/5.10. Types par valeur (structs).md
+++ b/05. Programmation orientée objet en C#/5.10. Types par valeur (structs).md
@@ -8,7 +8,7 @@ Les structs et les classes ont des similitudes, mais aussi des différences fond
 
 ### Principales différences
 
-```textmate
+```csharp
 using System;
 
 // Exemple de classe (type référence)
@@ -161,7 +161,7 @@ Les structs peuvent être conçus pour être mutables (modifiables) ou immutable
 
 ### Struct mutable
 
-```textmate
+```csharp
 // Struct mutable - peut être modifié après création
 public struct Coordonnee
 {
@@ -248,7 +248,7 @@ public class GestionnaireCoordonnees
 
 ### Struct immutable
 
-```textmate
+```csharp
 // Struct immutable - ne peut pas être modifié après création
 public readonly struct Point3D
 {
@@ -365,7 +365,7 @@ public class Program
 
 ### Considérations de performance
 
-```textmate
+```csharp
 using System;
 using System.Collections.Generic;
 using System.Diagnostics;
@@ -595,7 +595,7 @@ Depuis C# 10, il est possible de définir des records comme des types valeur (st
 
 > **Note** : Cette fonctionnalité nécessite .NET 6 ou supérieur.
 
-```textmate
+```csharp
 // Record struct standard (C# 10+, .NET 6+)
 public record struct Coordonnees(double Latitude, double Longitude)
 {
@@ -699,7 +699,7 @@ public class ExemplesRecordStruct
 
 ### Comparaison de performances entre struct, record class et record struct
 
-```textmate
+```csharp
 public class ComparaisonPerformance
 {
     const int ITERATIONS = 1_000_000;
@@ -825,7 +825,7 @@ Il existe certaines limitations et considérations à prendre en compte lors de 
 
 ### Exemple d'utilisation pratique
 
-```textmate
+```csharp
 // Exemple pratique d'utilisation de record struct pour un système de gestion de produits
 public readonly record struct SKU(string Code, string Catégorie);
 
@@ -886,7 +886,7 @@ Les record structs sont particulièrement adaptés dans les scénarios suivants 
 
 ### Conseils pour choisir entre les différents types
 
-```textmate
+```csharp
 // Guide de choix entre class, struct, record class et record struct
 public class GuideDeChoix
 {
