--- a/05. Programmation orientée objet en C#/5.2. Propriétés et encapsulation.md
+++ b/05. Programmation orientée objet en C#/5.2. Propriétés et encapsulation.md
@@ -8,7 +8,7 @@ Les getters et setters contrôlent l'accès aux champs d'une classe, permettant 
 
 ### Propriétés et champs privés
 
-```textmate
+```csharp
 public class Personne
 {
     // Champ privé (convention: débute par _)
@@ -57,7 +57,7 @@ catch (ArgumentException ex)
 
 Les propriétés sont idéales pour valider les données avant de les assigner à un champ :
 
-```textmate
+```csharp
 public class Produit
 {
     private string _référence;
@@ -102,7 +102,7 @@ produit.Prix = 19.99m;
 
 Les accesseurs get et set peuvent avoir des niveaux d'accès différents :
 
-```textmate
+```csharp
 public class Compte
 {
     private decimal _solde;
@@ -151,7 +151,7 @@ Console.WriteLine(compte.Solde);  // 500
 
 Autres exemples de modificateurs d'accès pour les accesseurs :
 
-```textmate
+```csharp
 public class Entité
 {
     // get public, set protected
@@ -197,7 +197,7 @@ var utilisateur = new UtilisateurEntité();
 
 Les propriétés peuvent déclencher des événements ou des actions quand leurs valeurs changent :
 
-```textmate
+```csharp
 public class ElementObservable
 {
     private string _nom;
@@ -239,7 +239,7 @@ element.Nom = "Nouvel élément";  // Affiche: "La propriété Nom a changé."
 
 Les propriétés peuvent être calculées à partir d'autres propriétés ou champs :
 
-```textmate
+```csharp
 public class Rectangle
 {
     // Propriétés stockées
@@ -276,7 +276,7 @@ Console.WriteLine($"Catégorie: {rectangle.Catégorie}");   // "Moyen"
 
 Les propriétés indexées permettent d'accéder aux éléments comme s'il s'agissait d'un tableau :
 
-```textmate
+```csharp
 public class MaListe<T>
 {
     private readonly List<T> _éléments = new List<T>();
@@ -326,7 +326,7 @@ Les propriétés auto-implémentées simplifient la syntaxe en générant automa
 
 ### Syntaxe de base
 
-```textmate
+```csharp
 public class Client
 {
     // Propriété auto-implémentée - le compilateur génère le champ privé
@@ -357,7 +357,7 @@ var client = new Client
 
 Depuis C# 6.0, vous pouvez initialiser directement les propriétés auto-implémentées :
 
-```textmate
+```csharp
 public class Paramètres
 {
     // Propriétés auto-implémentées avec valeurs par défaut
@@ -381,7 +381,7 @@ paramètres.Favoris.Add("Page d'accueil");
 
 ### Propriétés auto-implémentées avec niveaux d'accès différents
 
-```textmate
+```csharp
 public class Document
 {
     // get public, set public
@@ -446,7 +446,7 @@ Les propriétés en lecture seule ne peuvent être définies que pendant l'initi
 
 ### Propriétés auto-implémentées en lecture seule
 
-```textmate
+```csharp
 public class Utilisateur
 {
     // Propriété en lecture seule - peut être définie uniquement dans le constructeur
@@ -482,7 +482,7 @@ Console.WriteLine(utilisateur2.Id);  // GUID spécifié
 
 ### Propriétés calculées en lecture seule
 
-```textmate
+```csharp
 public class Employé
 {
     // Propriétés classiques
@@ -520,7 +520,7 @@ Console.WriteLine(employé.SalaireMensuel); // 5000
 
 ### Propriétés en lecture seule avec backing field
 
-```textmate
+```csharp
 public class Article
 {
     // Champ privé
@@ -554,7 +554,7 @@ Console.WriteLine(article.Référence);  // "REF001"
 
 ### Propriétés en lecture seule avec initialisation
 
-```textmate
+```csharp
 public class Configuration
 {
     // Propriété en lecture seule avec initialisation
@@ -590,7 +590,7 @@ Les propriétés à corps d'expression (expression-bodied) offrent une syntaxe p
 
 ### Propriétés calculées à corps d'expression
 
-```textmate
+```csharp
 public class Cercle
 {
     public double Rayon { get; set; }
@@ -617,7 +617,7 @@ Console.WriteLine($"Surface: {cercle.Surface}");        // ~78.5398
 
 À partir de C# 7.0, les accesseurs get et set peuvent également être définis avec la syntaxe à corps d'expression :
 
-```textmate
+```csharp
 public class Température
 {
     private double _celsius;
@@ -656,7 +656,7 @@ Console.WriteLine($"Celsius: {temp.Celsius}");        // 20
 
 ### Combinaison avec des propriétés auto-implémentées et la déclaration de types
 
-```textmate
+```csharp
 public class GPS
 {
     // Propriétés auto-implémentées
@@ -696,7 +696,7 @@ Les setters init-only, introduits dans C# 9.0, permettent de créer des proprié
 
 ### Propriétés auto-implémentées init-only
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 8, pas dans .NET Framework 4.7.2
 public class PersonneImmutable
 {
@@ -733,7 +733,7 @@ personne.Adresse = "456 Avenue des Champs-Élysées";
 
 ### Combinaison avec des champs en lecture seule
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 8, pas dans .NET Framework 4.7.2
 public class Commande
 {
@@ -812,7 +812,7 @@ Console.WriteLine($"Total de la commande: {commande.Total}€");  // ~1449.96
 
 ### Création d'objets immuables
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 8, pas dans .NET Framework 4.7.2
 public class Configuration
 {
@@ -856,7 +856,7 @@ var configTest = new Configuration
 
 Les records fournissent une approche encore plus concise pour définir des types immuables :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 8, pas dans .NET Framework 4.7.2
 
 // Record avec propriétés init-only
@@ -891,7 +891,7 @@ Console.WriteLine($"{personne2.Prénom} {personne2.Nom}");  // Jean Martin
 
 Pour modifier un objet avec des propriétés init-only, vous devez créer une copie. Avec .NET 8 et C# 9+, l'opérateur `with` permet de le faire facilement pour les records :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 8, pas dans .NET Framework 4.7.2
 public record ConfigRecord(string Environnement, string ApiUrl, int Timeout);
 
@@ -917,7 +917,7 @@ Console.WriteLine($"Config Prod: {configProd}");
 
 Bien que les propriétés init-only ne soient pas disponibles dans .NET Framework 4.7.2, vous pouvez obtenir un comportement similaire en utilisant des propriétés en lecture seule avec une initialisation dans le constructeur :
 
-```textmate
+```csharp
 // Alternative pour .NET Framework 4.7.2
 public class PersonneImmutable
 {
@@ -974,7 +974,7 @@ Console.WriteLine($"{personne2.Prénom} {personne2.Nom}");  // Jean Martin
 
 Ou en utilisant un pattern Builder plus complexe :
 
-```textmate
+```csharp
 // Pattern Builder pour .NET Framework 4.7.2
 public class PersonneImmutable
 {
@@ -1078,7 +1078,7 @@ var personne2 = new PersonneImmutable.Builder(personne)
 1. **Utilisez des propriétés plutôt que des champs publics**
    Les propriétés permettent de modifier l'implémentation sans casser le code client.
 
-```textmate
+```csharp
 // Bon
    public class Client { public string Nom { get; set; } }
 
@@ -1090,7 +1090,7 @@ var personne2 = new PersonneImmutable.Builder(personne)
 2. **Validez les données dans les setters**
    Assurez-vous que les propriétés ne contiennent que des valeurs valides.
 
-```textmate
+```csharp
 public string Email
    {
        get => _email;
@@ -1107,7 +1107,7 @@ public string Email
 3. **Utilisez les niveaux d'accès appropriés**
    Exposez uniquement ce qui est nécessaire.
 
-```textmate
+```csharp
 // Bonne pratique: setter privé pour contrôler les modifications
    public Guid Id { get; private set; }
 ```
@@ -1117,7 +1117,7 @@ public string Email
 
 1. **Utilisez des propriétés en lecture seule ou init-only pour les données qui ne devraient pas changer**
 
-```textmate
+```csharp
 // .NET Framework 4.7.2
    public Guid Id { get; }
 
@@ -1128,7 +1128,7 @@ public string Email
 
 2. **Rendez les collections exposées en lecture seule**
 
-```textmate
+```csharp
 private readonly List<string> _tags = new List<string>();
    public IReadOnlyCollection<string> Tags => _tags.AsReadOnly();
 ```
@@ -1148,7 +1148,7 @@ private readonly List<string> _tags = new List<string>();
 4. **Évitez les propriétés calculées coûteuses sans mise en cache**
    Si le calcul est lourd, envisagez de mettre en cache le résultat.
 
-```textmate
+```csharp
 private decimal? _moyenne;
 
    public decimal Moyenne
