--- a/05. Programmation orientée objet en C#/5.3. Constructeurs et finaliseurs.md
+++ b/05. Programmation orientée objet en C#/5.3. Constructeurs et finaliseurs.md
@@ -10,7 +10,7 @@ Les constructeurs sont des méthodes spéciales qui sont appelées lors de la cr
 
 Le constructeur par défaut est un constructeur sans paramètres. Si vous ne définissez aucun constructeur, le compilateur fournit automatiquement un constructeur par défaut public et sans paramètre.
 
-```textmate
+```csharp
 public class Client
 {
     // Champs et propriétés
@@ -34,7 +34,7 @@ Console.WriteLine(client.Nom);  // Affiche "Anonyme"
 
 > **Important**: Si vous définissez un constructeur avec des paramètres mais que vous ne définissez pas explicitement un constructeur sans paramètre, le compilateur ne fournira pas de constructeur par défaut.
 
-```textmate
+```csharp
 public class Produit
 {
     public string Nom { get; set; }
@@ -58,7 +58,7 @@ Produit p = new Produit("Ordinateur", 999.99m);  // OK
 
 Les constructeurs paramétrés acceptent des arguments qui peuvent être utilisés pour initialiser l'objet.
 
-```textmate
+```csharp
 public class Commande
 {
     public string Référence { get; set; }
@@ -117,7 +117,7 @@ commande.AjouterLigne(new LigneCommande
 
 Depuis C# 4.0, vous pouvez utiliser des paramètres optionnels et nommés dans les constructeurs :
 
-```textmate
+```csharp
 public class Configuration
 {
     public string Serveur { get; }
@@ -150,7 +150,7 @@ var config3 = new Configuration("autreserveur.com", timeout: 60);  // Paramètre
 
 Les constructeurs privés empêchent l'instanciation directe d'une classe, ce qui est utile pour implémenter des patterns comme Singleton ou Factory Method :
 
-```textmate
+```csharp
 public class Logger
 {
     // Instance unique (Singleton)
@@ -213,7 +213,7 @@ logger.LogInfo("Application démarrée");
 
 Un constructeur statique est utilisé pour initialiser des membres statiques d'une classe. Il est appelé automatiquement avant la première utilisation de la classe.
 
-```textmate
+```csharp
 public class DatabaseConfig
 {
     // Membres statiques
@@ -270,7 +270,7 @@ Caractéristiques importantes des constructeurs statiques :
 
 .NET 8 avec C# 12 introduit les constructeurs primaires pour les classes, une fonctionnalité qui n'est pas disponible dans .NET Framework 4.7.2 :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 8
 public class Personne(string nom, int age)
 {
@@ -299,7 +299,7 @@ Il existe plusieurs façons d'initialiser des objets en C#, chacune offrant diff
 
 L'approche la plus courante pour initialiser un objet consiste à utiliser des constructeurs :
 
-```textmate
+```csharp
 public class Adresse
 {
     public string Rue { get; set; }
@@ -337,7 +337,7 @@ Adresse adresse2 = new Adresse("45 Avenue Victor Hugo", "Paris", "75016", "Franc
 
 Les initialiseurs d'objets introduits dans C# 3.0 permettent d'initialiser un objet et ses propriétés en une seule expression :
 
-```textmate
+```csharp
 // Utilisation d'initialiseurs d'objets
 Adresse adresse3 = new Adresse
 {
@@ -360,7 +360,7 @@ Adresse adresse4 = new Adresse("1 Place Bellecour", "Lyon", "69002", "France")
 
 Les initialiseurs de collections permettent d'initialiser des collections en une seule expression :
 
-```textmate
+```csharp
 public class Répertoire
 {
     public string Nom { get; set; }
@@ -398,7 +398,7 @@ var répertoire = new Répertoire
 
 Depuis C# 6.0, vous pouvez initialiser des champs et des propriétés auto-implémentées directement à leur point de déclaration :
 
-```textmate
+```csharp
 public class Article
 {
     // Initialisation de champ
@@ -440,7 +440,7 @@ Pour les objets immuables, plusieurs approches sont possibles :
 
 #### Approche .NET Framework 4.7.2 - Propriétés en lecture seule
 
-```textmate
+```csharp
 // .NET Framework 4.7.2
 public class ConfigurationImmuable
 {
@@ -477,7 +477,7 @@ var configTest = configProd.AvecEnvironnement("Test");
 
 #### Approche .NET 8 - Propriétés init-only et records
 
-```textmate
+```csharp
 // .NET 8 uniquement
 public class ConfigurationImmuable
 {
@@ -526,7 +526,7 @@ var configRecTest = configRecProd with { Environnement = "Test" };
 
 .NET 8 introduit le concept de membres requis qui doivent être initialisés :
 
-```textmate
+```csharp
 // .NET 8 uniquement
 public class DocumentRequired
 {
@@ -557,7 +557,7 @@ Le chaînage de constructeurs vous permet d'appeler un constructeur à partir d'
 
 ### Chaînage dans la même classe avec `this`
 
-```textmate
+```csharp
 public class Utilisateur
 {
     public string Nom { get; set; }
@@ -604,7 +604,7 @@ var user3 = new Utilisateur();
 
 ### Chaînage vers la classe de base avec `base`
 
-```textmate
+```csharp
 public class Personne
 {
     public string Nom { get; }
@@ -666,7 +666,7 @@ Dans une hiérarchie de classes, l'initialisation se fait dans cet ordre :
 4. Le constructeur de la classe de base est appelé
 5. Le corps du constructeur de la classe dérivée est exécuté
 
-```textmate
+```csharp
 public class A
 {
     // Champs d'instance avec initialiseurs
@@ -712,7 +712,7 @@ var obj = new B();
 
 Les constructeurs privés combinés avec des méthodes de fabrique (factory methods) permettent de contrôler précisément la création d'instances :
 
-```textmate
+```csharp
 public class Produit
 {
     public string Nom { get; }
@@ -761,7 +761,7 @@ Les finaliseurs et le pattern IDisposable sont utilisés pour libérer des resso
 
 Un finaliseur est une méthode spéciale qui est appelée par le Garbage Collector avant que l'objet ne soit récupéré, permettant ainsi la libération des ressources non gérées.
 
-```textmate
+```csharp
 public class RessourceNonGérée
 {
     // Handle pour une ressource non gérée (comme un fichier ou une connexion)
@@ -825,7 +825,7 @@ var ressource = new RessourceNonGérée();
 
 Le pattern IDisposable fournit une méthode déterministe pour libérer des ressources sans dépendre du Garbage Collector :
 
-```textmate
+```csharp
 public class GestionnaireConnexion : IDisposable
 {
     private SqlConnection _connexion;
@@ -906,7 +906,7 @@ gestionnaire2.ExécuterCommande("INSERT INTO Logs (Message) VALUES ('Test 2')");
 
 .NET Core 3.0 et versions ultérieures, y compris .NET 8, introduisent l'interface IAsyncDisposable pour la libération asynchrone des ressources :
 
-```textmate
+```csharp
 // Disponible uniquement dans .NET 8, pas dans .NET Framework 4.7.2
 public class GestionnaireConnexionAsync : IAsyncDisposable
 {
@@ -980,7 +980,7 @@ async Task AutreExempleAsync()
 
 Voici une implémentation complète du pattern Dispose avec support des ressources gérées et non gérées :
 
-```textmate
+```csharp
 public class GestionnaireFichier : IDisposable
 {
     private FileStream _fichier;
@@ -1088,7 +1088,7 @@ public void ExempleUtilisation()
 
 Pour gérer correctement les ressources Win32 non gérées, .NET fournit la classe abstraite SafeHandle qui simplifie la gestion des handles :
 
-```textmate
+```csharp
 using Microsoft.Win32.SafeHandles;
 using System.Runtime.InteropServices;
 
