--- a/05. Programmation orientée objet en C#/5.5. Polymorphisme.md
+++ b/05. Programmation orientée objet en C#/5.5. Polymorphisme.md
@@ -7,7 +7,7 @@ Le polymorphisme est l'un des piliers fondamentaux de la programmation orientée
 
 Le polymorphisme d'inclusion (aussi appelé polymorphisme par sous-typage) permet à une référence d'un type de base de désigner un objet d'un type dérivé. C'est la forme la plus courante de polymorphisme en C#.
 
-```textmate
+```csharp
 // Classe de base
 public class Animal
 {
@@ -69,7 +69,7 @@ public class Program
 
 Le polymorphisme ad hoc permet d'avoir plusieurs méthodes avec le même nom mais des signatures différentes dans une même classe. C'est ce qu'on appelle la surcharge de méthodes.
 
-```textmate
+```csharp
 public class Calculateur
 {
     // Surcharge pour les entiers
@@ -120,7 +120,7 @@ public class Program
 
 Le polymorphisme paramétrique permet d'écrire des classes et des méthodes qui fonctionnent avec n'importe quel type tout en préservant la sécurité des types. En C#, cela se fait grâce aux génériques.
 
-```textmate
+```csharp
 // Classe générique
 public class File<T>
 {
@@ -195,7 +195,7 @@ public class Program
 
 Quand on travaille avec du code polymorphique, on a parfois besoin de traiter un objet selon son type concret plutôt que son type de base. C# offre plusieurs mécanismes pour cela.
 
-```textmate
+```csharp
 public class Program
 {
     public static void Main()
