--- a/05. Programmation orientée objet en C#/5.6. Interfaces.md
+++ b/05. Programmation orientée objet en C#/5.6. Interfaces.md
@@ -6,7 +6,7 @@ Les interfaces sont un concept fondamental en C# qui permettent de définir un c
 
 Une interface définit un ensemble de membres que toute classe ou structure implémentant cette interface doit fournir.
 
-```textmate
+```csharp
 // Définition d'une interface
 public interface IVehicule
 {
@@ -85,7 +85,7 @@ public class Program
 
 Un des avantages majeurs des interfaces est qu'une classe peut implémenter plusieurs interfaces, contrairement à l'héritage simple en C#.
 
-```textmate
+```csharp
 // Interfaces
 public interface IVehicule
 {
@@ -196,7 +196,7 @@ public class Program
 
 Parfois, deux interfaces peuvent avoir des membres avec la même signature, ou vous pourriez vouloir cacher certains membres d'interface pour qu'ils ne soient accessibles que via l'interface. L'implémentation explicite résout ces problèmes.
 
-```textmate
+```csharp
 // Deux interfaces avec une méthode de même nom
 public interface IAnimal
 {
@@ -281,7 +281,7 @@ public class Program
 
 À partir de C# 8.0 (disponible sur .NET Core 3.0 et .NET 5/6/7/8), les interfaces peuvent fournir des implémentations par défaut pour leurs membres. Cette fonctionnalité facilite l'évolution des interfaces sans casser la compatibilité avec le code existant.
 
-```textmate
+```csharp
 // Interface avec implémentation par défaut (C# 8+)
 public interface ILogger
 {
@@ -357,7 +357,7 @@ public class Program
 
 Les interfaces peuvent être génériques, ce qui les rend plus flexibles et réutilisables avec différents types.
 
-```textmate
+```csharp
 // Interface générique
 public interface IRepository<T> where T : class
 {
