--- a/05. Programmation orientée objet en C#/5.7. Classes abstraites.md
+++ b/05. Programmation orientée objet en C#/5.7. Classes abstraites.md
@@ -6,7 +6,7 @@ Les classes abstraites sont un concept fondamental de la programmation orientée
 
 Tandis que les interfaces définissent uniquement un contrat (quoi faire), les classes abstraites peuvent fournir à la fois un contrat et une implémentation partielle (quoi faire et comment le faire).
 
-```textmate
+```csharp
 // Interface - définit uniquement un contrat
 public interface IVehicule
 {
@@ -115,7 +115,7 @@ public class Program
 
 Les méthodes abstraites sont des méthodes déclarées sans implémentation qui doivent être implémentées par les classes dérivées. Elles définissent la signature et le contrat sans spécifier le comportement.
 
-```textmate
+```csharp
 // Classe abstraite avec méthodes abstraites
 public abstract class Forme
 {
@@ -229,7 +229,7 @@ public class Program
 
 Une classe abstraite peut combiner des implémentations complètes, des implémentations partielles et des méthodes purement abstraites pour créer un modèle flexible pour les classes dérivées.
 
-```textmate
+```csharp
 // Classe abstraite avec implémentation partielle
 public abstract class GestionnaireDocuments
 {
