--- a/05. Programmation orientée objet en C#/5.8. Modificateurs d'accès.md
+++ b/05. Programmation orientée objet en C#/5.8. Modificateurs d'accès.md
@@ -10,7 +10,7 @@ C# propose cinq modificateurs d'accès de base et une combinaison, chacun avec u
 
 Le modificateur `public` offre le niveau d'accès le plus large. Les membres `public` sont accessibles sans restriction, depuis n'importe quelle partie du code.
 
-```textmate
+```csharp
 public class Utilisateur
 {
     // Accessible de partout
@@ -43,7 +43,7 @@ public class Program
 
 Le modificateur `private` offre le niveau d'accès le plus restrictif. Les membres `private` sont accessibles uniquement à l'intérieur de la classe ou du struct qui les contient.
 
-```textmate
+```csharp
 public class CompteBancaire
 {
     // Champs privés - accessibles uniquement à l'intérieur de la classe
@@ -126,7 +126,7 @@ public class Program
 
 Le modificateur `protected` permet l'accès aux membres à l'intérieur de la classe elle-même et à toutes les classes qui en héritent, même si elles sont dans un autre assembly.
 
-```textmate
+```csharp
 public class Vehicule
 {
     // Champs protected - accessibles dans cette classe et les classes dérivées
@@ -204,7 +204,7 @@ public class Program
 
 Le modificateur `internal` limite l'accès aux membres au sein du même assembly. Les membres `internal` sont accessibles à toutes les classes du même projet ou assembly, mais pas depuis d'autres assemblies (DLL ou EXE).
 
-```textmate
+```csharp
 // Dans un fichier du projet/assembly principal
 namespace MonApplication.Core
 {
@@ -298,7 +298,7 @@ namespace MonApplication.Client
 
 Le modificateur `private protected` limite l'accès aux classes dérivées, mais uniquement dans le même assembly. C'est une combinaison de `private` et `protected`.
 
-```textmate
+```csharp
 // Dans l'assembly principal
 namespace MonApplication.Core
 {
@@ -370,7 +370,7 @@ namespace MonApplication.Client
 
 Le modificateur `protected internal` permet l'accès aux membres à toutes les classes dans le même assembly et à toutes les classes dérivées, y compris celles qui sont dans d'autres assemblies.
 
-```textmate
+```csharp
 // Dans l'assembly principal
 namespace MonApplication.Framework
 {
@@ -455,7 +455,7 @@ namespace MonApplication.Extension
 
 Voici quelques bonnes pratiques pour l'utilisation des modificateurs d'accès :
 
-```textmate
+```csharp
 public class BonnesPratiques
 {
     // 1. Déclarez les champs comme privés et utilisez des propriétés pour les exposer
@@ -517,7 +517,7 @@ internal class ImplementationInterne
 
 ### Exemples de conception avec différents modificateurs
 
-```textmate
+```csharp
 namespace ExempleApplication.Core
 {
     // Classe de base publique avec une API soigneusement conçue
@@ -640,7 +640,7 @@ Le contrôle de la visibilité est un aspect important de la conception des API 
 
 ### Visibilité asymétrique dans les propriétés
 
-```textmate
+```csharp
 public class Utilisateur
 {
     // Propriété avec accesseur public en lecture et privé en écriture
@@ -699,7 +699,7 @@ public class GestionnaireUtilisateurs
 
 ### Visibilité hiérarchique avec les classes imbriquées
 
-```textmate
+```csharp
 public class BaseDonnees
 {
     // Champ privé
@@ -784,7 +784,7 @@ public class Program
 
 Vous pouvez utiliser l'attribut `InternalsVisibleTo` pour permettre à un assembly spécifique d'accéder aux membres `internal` d'un autre assembly, ce qui est utile pour les tests unitaires.
 
-```textmate
+```csharp
 // Dans l'assembly principal (Exemple.Core)
 using System.Runtime.CompilerServices;
 
