--- a/05. Programmation orientée objet en C#/5.9. Records (C# 9+).md
+++ b/05. Programmation orientée objet en C#/5.9. Records (C# 9+).md
@@ -8,7 +8,7 @@ Les records sont une fonctionnalité introduite dans C# 9.0 (disponible avec .NE
 
 Les records sont par défaut immuables et implémentent automatiquement l'égalité basée sur les valeurs, ce qui signifie que deux records sont considérés comme égaux si toutes leurs propriétés ont les mêmes valeurs.
 
-```textmate
+```csharp
 // Définition d'un record simple
 public record Personne(string Nom, string Prenom, int Age);
 
@@ -44,7 +44,7 @@ public class Program
 
 Pour obtenir le même comportement avec une classe, il faudrait beaucoup plus de code :
 
-```textmate
+```csharp
 // Classe équivalente au record Personne - beaucoup plus verbeuse
 public class PersonneClasse
 {
@@ -87,7 +87,7 @@ public class PersonneClasse
 
 Bien que l'immutabilité soit encouragée avec les records, il est possible de déclarer des propriétés mutables :
 
-```textmate
+```csharp
 // Record avec propriétés positionnelles et propriété mutable
 public record Utilisateur(string Id, string NomUtilisateur)
 {
@@ -130,7 +130,7 @@ public class Program
 
 On peut aussi définir des records avec une syntaxe semblable à celle des classes traditionnelles :
 
-```textmate
+```csharp
 // Record avec syntaxe de corps de classe
 public record Produit
 {
@@ -182,7 +182,7 @@ public class Program
 
 Les records offrent une fonctionnalité appelée "avec-expressions" (with-expressions) qui permet de créer une copie d'un record avec certaines propriétés modifiées, tout en gardant les autres inchangées.
 
-```textmate
+```csharp
 // Record de base
 public record Adresse(string Rue, string Ville, string CodePostal, string Pays);
 
@@ -229,7 +229,7 @@ public class Program
 
 Il est important de noter que les avec-expressions font des copies superficielles. Si votre record contient des références à des objets mutables, ces références seront partagées entre l'original et la copie.
 
-```textmate
+```csharp
 // Record avec une liste (référence mutable)
 public record Panier(string ClientId, List<string> Articles);
 
@@ -278,7 +278,7 @@ Les records supportent nativement la déconstruction et sont particulièrement a
 
 ### Déconstruction
 
-```textmate
+```csharp
 public record Point(double X, double Y, double Z);
 
 public class Program
@@ -335,7 +335,7 @@ public record Rectangle(double Largeur, double Hauteur)
 
 Les records fonctionnent particulièrement bien avec le pattern matching introduit dans les versions récentes de C#.
 
-```textmate
+```csharp
 // Hiérarchie de records
 public abstract record Forme;
 public record Cercle(double Rayon) : Forme;
@@ -408,7 +408,7 @@ public class Program
 
 Les records permettent des cas d'utilisation avancés avec le pattern matching, notamment en combinant des patterns de propriété.
 
-```textmate
+```csharp
 // Record représentant une personne
 public record Personne(string Nom, int Age, string Profession, string Nationalite);
 
@@ -490,7 +490,7 @@ public class Program
 
 À partir de C# 10 (disponible avec .NET 6 et versions ultérieures), il est possible de définir des records comme des types valeur avec le mot-clé `struct`.
 
-```textmate
+```csharp
 // Record struct (C# 10+, .NET 6+)
 public record struct Coordonnees(double Latitude, double Longitude)
 {
